--- a/WooCommerce/Resources/de.lproj/Localizable.strings
+++ b/WooCommerce/Resources/de.lproj/Localizable.strings
@@ -1,4 +1,4 @@
-/* Translation-Revision-Date: 2019-04-16 07:54:02+0000 */
+/* Translation-Revision-Date: 2019-05-02 10:54:03+0000 */
 /* Plural-Forms: nplurals=2; plural=n != 1; */
 /* Generator: GlotPress/2.4.0-alpha */
 /* Language: de */
@@ -27,10 +27,12 @@
 /* The plugin is active on the site and has enabled automatic updates */
 "Active, Autoupdates on" = "Aktiv, automatische Updates an";
 
-/* Add a note screen - button title to send the note */
+/* Add a note screen - button title to send the note
+   Add tracking screen - button title to add a tracking */
 "Add" = "Hinzufügen";
 
-/* Add Tracking row label */
+/* Add Tracking row label
+   Add tracking screen - title. */
 "Add Tracking" = "Verfolgung hinzufügen";
 
 /* Button text for adding a new order note */
@@ -41,6 +43,9 @@
 
 /* VoiceOver accessibility hint, informing the user that the button can be used to add an order note. */
 "Adds a note to an order" = "Fügt einen Hinweis zu einer Bestellung hinzu";
+
+/* VoiceOver accessibility hint, informing the user that the button can be used to add tracking to an order. Should end with a period. */
+"Adds tracking to an order." = "Fügt einer Bestellung eine Sendungsverfolgungsnummer hinzu.";
 
 /* Cell subtitle explaining why you might want to navigate to view the application log. */
 "Advanced tool to review the app status" = "Erweitertes Tool zum Prüfen des App-Status";
@@ -111,9 +116,6 @@
 
 /* Billing title for customer info cell */
 "Billing details" = "Abrechnungsdetails";
-
-/* Browse our FAQ title */
-"Browse our FAQ" = "Durchsuche unser FAQ";
 
 /* Legal disclaimer for signup buttons, the underscores _..._ denote underline */
 "By signing up, you agree to our _Terms of Service_." = "Durch die Registrierung stimmst du unseren Geschäftsbedingungen zu.";
@@ -194,6 +196,9 @@
 /* Cell title: the current date. */
 "Current" = "Aktuell";
 
+/* Title of button to add a custom tracking provider if filtering the list yields no results. */
+"Custom Provider" = "Individueller Anbieter";
+
 /* Customer info section title
    Section title for the customer's billing and shipping address */
 "Customer Information" = "Kundeninformationen";
@@ -202,11 +207,17 @@
    Section title for a note from the customer */
 "Customer Provided Note" = "Vom Kunden angegebener Hinweis";
 
+/* Add / Edit shipping provider. Title of cell date shipped */
+"Date shipped" = "Versanddatum";
+
 /* Statistical unit - a single day */
 "Day" = "Tag";
 
 /* Plural of 'day' — a statistical unit */
 "Days" = "Tage";
+
+/* Delete Tracking button title */
+"Delete Tracking" = "Sendungsverfolgung löschen";
 
 /* The row label to tap for a detailed product list */
 "Details" = "Details";
@@ -218,7 +229,7 @@
 "Discount" = "Rabatt";
 
 /* Add a note screen - button title for closing the view
-   Dismiss the action sheet */
+   Dismiss the action sheet - Product details screen - button title for closing the view */
 "Dismiss" = "Überspringen";
 
 /* Label for button to log in using your site address. The underscores _..._ denote underline */
@@ -247,6 +258,15 @@
 
 /* VoiceOver accessibility hint, informing the user that double-tapping will toggle the switch off and on. */
 "Double tap to toggle setting." = "Zum Umschalten der Einstellung doppeltippen.";
+
+/* Accessibility hint for Pencil button in an individual Shipment Tracking in the order fulfillment screen */
+"Edit" = "Bearbeiten";
+
+/* Edit tracking screen - title. */
+"Edit Tracking" = "Sendungsverfolgung bearbeiten";
+
+/* Accessibility hint for Edit Shipment button in Order fulfillment screen */
+"Edits a shipment." = "Bearbeitet eine Lieferung.";
 
 /* Email address text field placeholder */
 "Email" = "E-Mail";
@@ -309,7 +329,7 @@
 /* Description for Top Performers section of My Store tab. */
 "Gain insights into how products are performing on your store" = "Erfahre, wie erfolgreich Produkte in deinem Shop sind";
 
-/* Subtitle for Browse our FAQ */
+/* Subtitle for Help Center */
 "Get answers to questions you have" = "Erhalte Antworten auf deine Fragen";
 
 /* Alerts the user that wpcom account information is being retrieved. */
@@ -327,6 +347,9 @@
 
 /* Contact Support Action */
 "Help & Support" = "Hilfe & Support";
+
+/* Browse our help documentation website title */
+"Help Center" = "Hilfe-Center";
 
 /* My Store > Settings > Privacy settings section */
 "Help Improve The App" = "Hilf uns, die App zu verbessern";
@@ -388,6 +411,9 @@
 /* Displayed when an Order is being retrieved */
 "Loading Order" = "Bestellung wird geladen";
 
+/* Displayed when an Product is being retrieved */
+"Loading Product" = "Produkt wird geladen";
+
 /* Button title.  Tapping takes the user to the login form.
    Log In button label. */
 "Log In" = "Anmelden";
@@ -416,6 +442,9 @@
 
 /* Sign in instructions on the 'log in using email' screen. */
 "Log in with your WordPress.com account email address to manage your WooCommerce stores." = "Melde dich mit der E-Mail-Adresse deines WordPress.com-Kontos an, um deine WooCommerce-Shops zu verwalten.";
+
+/* Error message that displays on the 'Log in by entering your site address.' screen. Jetpack is required for logging into the WooCommerce mobile apps. */
+"Looks like your site isn't set up to use this app. Make sure your site has Jetpack installed to continue." = "Anscheinend wurde deine Website nicht zur Verwendung mit dieser App eingerichtet. Vergewissere dich, dass Jetpack auf deiner Website installiert ist, um fortzufahren.";
 
 /* Title of a button. */
 "Lost your password?" = "Passwort vergessen?";
@@ -510,6 +539,9 @@
 /* Notifications List (Empty State + Filters)
    Orders List (Empty State + Filters) */
 "No results for the selected criteria" = "Keine Ergebnisse für die ausgewählten Kriterien";
+
+/* Empty state for the list of shipment providers. It reads: 'No results for DHL. Add a custom provider' */
+"No results found for (term)\nAdd a custom provider" = "No results found for (term)\nAdd a custom provider";
 
 /* Order details > tracking.  This is where the shipping date would normally display. */
 "Not shipped yet" = "Noch nicht versendet";
@@ -649,8 +681,11 @@
 "Private note" = "Privater Hinweis";
 
 /* Description for Top Performers left column header
-   Product section title - Section header title for the product */
+   Product section title - Section header title for the product - Title of product detail screen. */
 "Product" = "Produkt";
+
+/* Notice displayed when the onscreen product was just deleted. It reads: Product {product number} has been removed from your store. */
+"Product %ld has been removed from your store" = "Das Produkt %ld wurde aus deinem Shop entfernt";
 
 /* VoiceOver accessibility hint, informing the user that the row can be tapped to get to a prompt that lets them call or message the billing customer. */
 "Prompts with the option to call or message the billing customer." = "Zeigt eine Aufforderung mit der Option an, den Rechnungskunden anzurufen oder diesem eine Nachricht zu senden.";
@@ -709,6 +744,9 @@
 /* One Time Code has been sent via SMS */
 "SMS Sent" = "SMS gesendet";
 
+/* Edit tracking screen - button title to save a tracking */
+"Save" = "Speichern";
+
 /* Orders Search Placeholder */
 "Search all orders" = "Alle Bestellungen durchsuchen";
 
@@ -747,8 +785,14 @@
 /* Shipping label for payment view */
 "Shipping" = "Versand";
 
+/* Title of view displaying all available Shipment Tracking Providers */
+"Shipping Providers" = "Lieferanbieter";
+
 /* Shipping title for customer info cell */
 "Shipping details" = "Versanddetails";
+
+/* Add / Edit shipping provider. Title of cell presenting name */
+"Shipping provider" = "Lieferanbieter";
 
 /* Footer text to show the billing cell */
 "Show billing" = "Abrechnung einblenden";
@@ -930,6 +974,9 @@
 /* Settings > Privacy Settings > privacy info section. Explains what we do with the information we collect. */
 "This information helps us improve our products, make marketing to you more relevant, personalize your WordPress.com experience, and more as detailed in our privacy policy." = "Diese Informationen helfen uns dabei, unsere Produkte zu verbessern, Marketing besser auf dich zuzuschneiden, deine Erfahrung mit WordPress.com zu personalisieren und mehr. All das kannst du auch in unserer Datenschutzerklärung nachlesen.";
 
+/* Message displayed when loading a specific product fails */
+"This product couldn't be loaded" = "Fehler beim Laden des Produkts";
+
 /* Text instructing the user to enter their email address. */
 "To create your new WordPress.com account, please enter your email address." = "Um dein neues WordPress.com-Konto zu erstellen, gib deine E-Mail-Adresse ein.";
 
@@ -964,6 +1011,9 @@
 /* Order tracking section title */
 "Tracking" = "Sendungsverfolgung";
 
+/* Add / Edit shipping provider. Title of cell presenting tracking number */
+"Tracking number" = "Sendungsverfolgungsnummer";
+
 /* Accessibility label for Shipment tracking number in Order details screen. Reads like: Tracking Number 1AZ234567890 */
 "Tracking number %@" = "Sendungsverfolgungsnummer %@";
 
@@ -991,14 +1041,23 @@
 /* Content of error presented when Add Note Action Failed. It reads: Unable to add note to order #{order number} */
 "Unable to add note to order #(viewModel.order.orderID)" = "Bestellung Nr. (viewModel.order.orderID) konnte keine Notiz hinzugefügt werden";
 
+/* Content of error presented when Add Shipment Tracking Action Failed. It reads: Unable to add tracking to order #{order number} */
+"Unable to add tracking to order #(orderID)" = "Sendungsverfolgung für Bestellung Nr. (orderID) kann nicht hinzugefügt werden";
+
 /* Content of error presented when updating the status of an Order fails. It reads: Unable to change status of order #{order number} */
 "Unable to change status of order #(orderID)" = "Status der Bestellung Nr. (orderID) kann nicht geändert werden";
+
+/* Content of error presented when Delete Shipment Tracking Action Failed. It reads: Unable to delete tracking for order #{order number} */
+"Unable to delete tracking for order #(orderID)" = "Sendungsverfolgung für Bestellung Nr. (orderID) kann nicht gelöscht werden";
 
 /* Displayed during the Login flow, whenever the user has no woo stores associated. */
 "Unable to find WooCommerce stores connected to this account" = "Es können keine WooCommerce-Shops gefunden werden, die mit diesem Konto verknüpft sind";
 
 /* Content of error presented when Fullfill Order Action Failed. It reads: Unable to fulfill order #{order number} */
 "Unable to fulfill order #(orderID)" = "Bestellung Nr. (orderID) konnte nicht erfüllt werden";
+
+/* Content of error presented when loading the list of shipment providers failed. It reads: Unable to load Shipment Providers */
+"Unable to load Shipment Providers" = "Lieferanbieter kann nicht geladen werden";
 
 /* Load Action Failed */
 "Unable to load content" = "Inhalt konnte nicht geladen werden";
@@ -1008,6 +1067,9 @@
 
 /* No comment provided by engineer. */
 "Unable to read the WordPress site at that URL. Tap 'Need Help?' to view the FAQ." = "Es konnte keine WordPress-Website unter dieser Adresse gefunden werden. Bitte tippe „Brauchst du Hilfe?“ an, um die FAQ anzusehen.";
+
+/* Notice displayed when an error occurs while refreshing a product. It reads: Unable to refresh product #{product number} */
+"Unable to refresh Product #%ld" = "Produkt Nr. %ld kann nicht aktualisiert werden";
 
 /* Refresh Action Failed */
 "Unable to refresh list" = "Liste kann nicht aktualisiert werden";
