--- a/WooCommerce/Resources/es.lproj/Localizable.strings
+++ b/WooCommerce/Resources/es.lproj/Localizable.strings
@@ -1,4 +1,4 @@
-/* Translation-Revision-Date: 2019-04-16 13:54:03+0000 */
+/* Translation-Revision-Date: 2019-04-30 11:54:03+0000 */
 /* Plural-Forms: nplurals=2; plural=n != 1; */
 /* Generator: GlotPress/2.4.0-alpha */
 /* Language: es */
@@ -27,10 +27,12 @@
 /* The plugin is active on the site and has enabled automatic updates */
 "Active, Autoupdates on" = "Activo, actualizaciones automáticas activas";
 
-/* Add a note screen - button title to send the note */
+/* Add a note screen - button title to send the note
+   Add tracking screen - button title to add a tracking */
 "Add" = "Añadir";
 
-/* Add Tracking row label */
+/* Add Tracking row label
+   Add tracking screen - title. */
 "Add Tracking" = "Añadir seguimiento";
 
 /* Button text for adding a new order note */
@@ -41,6 +43,9 @@
 
 /* VoiceOver accessibility hint, informing the user that the button can be used to add an order note. */
 "Adds a note to an order" = "Añade una nota a un pedido.";
+
+/* VoiceOver accessibility hint, informing the user that the button can be used to add tracking to an order. Should end with a period. */
+"Adds tracking to an order." = "Añade el seguimiento a un pedido.";
 
 /* Cell subtitle explaining why you might want to navigate to view the application log. */
 "Advanced tool to review the app status" = "Herramienta avanzada para revisar el estado de la aplicación";
@@ -111,9 +116,6 @@
 
 /* Billing title for customer info cell */
 "Billing details" = "Detalles de la facturación";
-
-/* Browse our FAQ title */
-"Browse our FAQ" = "Explora nuestras Preguntas frecuentes";
 
 /* Legal disclaimer for signup buttons, the underscores _..._ denote underline */
 "By signing up, you agree to our _Terms of Service_." = "Al registrarte aceptas nuestros _Términos del servicio_.";
@@ -194,6 +196,9 @@
 /* Cell title: the current date. */
 "Current" = "Actual";
 
+/* Title of button to add a custom tracking provider if filtering the list yields no results. */
+"Custom Provider" = "Personalizar proveedor";
+
 /* Customer info section title
    Section title for the customer's billing and shipping address */
 "Customer Information" = "Información del cliente";
@@ -202,11 +207,17 @@
    Section title for a note from the customer */
 "Customer Provided Note" = "Nota proporcionada por el cliente";
 
+/* Add / Edit shipping provider. Title of cell date shipped */
+"Date shipped" = "Fecha de envío";
+
 /* Statistical unit - a single day */
 "Day" = "Día";
 
 /* Plural of 'day' — a statistical unit */
 "Days" = "Días";
+
+/* Delete Tracking button title */
+"Delete Tracking" = "Eliminar seguimiento";
 
 /* The row label to tap for a detailed product list */
 "Details" = "Detalles";
@@ -218,7 +229,7 @@
 "Discount" = "Descuento";
 
 /* Add a note screen - button title for closing the view
-   Dismiss the action sheet */
+   Dismiss the action sheet - Product details screen - button title for closing the view */
 "Dismiss" = "Cancelar";
 
 /* Label for button to log in using your site address. The underscores _..._ denote underline */
@@ -247,6 +258,15 @@
 
 /* VoiceOver accessibility hint, informing the user that double-tapping will toggle the switch off and on. */
 "Double tap to toggle setting." = "Toca dos veces para activar o desactivar la opción.";
+
+/* Accessibility hint for Pencil button in an individual Shipment Tracking in the order fulfillment screen */
+"Edit" = "Editar";
+
+/* Edit tracking screen - title. */
+"Edit Tracking" = "Editar seguimiento";
+
+/* Accessibility hint for Edit Shipment button in Order fulfillment screen */
+"Edits a shipment." = "Edita un envío.";
 
 /* Email address text field placeholder */
 "Email" = "Correo electrónico";
@@ -309,7 +329,7 @@
 /* Description for Top Performers section of My Store tab. */
 "Gain insights into how products are performing on your store" = "Obtén detalles sobre el rendimiento de los productos en tu tienda";
 
-/* Subtitle for Browse our FAQ */
+/* Subtitle for Help Center */
 "Get answers to questions you have" = "Obtén respuestas a todas tus preguntas";
 
 /* Alerts the user that wpcom account information is being retrieved. */
@@ -327,6 +347,9 @@
 
 /* Contact Support Action */
 "Help & Support" = "Ayuda y soporte";
+
+/* Browse our help documentation website title */
+"Help Center" = "Centro de ayuda";
 
 /* My Store > Settings > Privacy settings section */
 "Help Improve The App" = "Ayuda a mejorar la aplicación";
@@ -388,6 +411,9 @@
 /* Displayed when an Order is being retrieved */
 "Loading Order" = "Cargando el pedido";
 
+/* Displayed when an Product is being retrieved */
+"Loading Product" = "Cargando producto";
+
 /* Button title.  Tapping takes the user to the login form.
    Log In button label. */
 "Log In" = "Acceder";
@@ -416,6 +442,9 @@
 
 /* Sign in instructions on the 'log in using email' screen. */
 "Log in with your WordPress.com account email address to manage your WooCommerce stores." = "Accede con la dirección de correo electrónico de tu cuenta de WordPress.com para gestionar tus tiendas de WooCommerce.";
+
+/* Error message that displays on the 'Log in by entering your site address.' screen. Jetpack is required for logging into the WooCommerce mobile apps. */
+"Looks like your site isn't set up to use this app. Make sure your site has Jetpack installed to continue." = "Parece que tu sitio no está configurado para usar esta aplicación. Asegúrate de tener Jetpack instalado en tu sitio antes de continuar.";
 
 /* Title of a button. */
 "Lost your password?" = "¿Has perdido tu contraseña?";
@@ -510,6 +539,9 @@
 /* Notifications List (Empty State + Filters)
    Orders List (Empty State + Filters) */
 "No results for the selected criteria" = "No hay resultados para los criterios elegidos";
+
+/* Empty state for the list of shipment providers. It reads: 'No results for DHL. Add a custom provider' */
+"No results found for (term)\nAdd a custom provider" = "No results found for (term)\nAdd a custom provider";
 
 /* Order details > tracking.  This is where the shipping date would normally display. */
 "Not shipped yet" = "Aún no se ha enviado";
@@ -649,8 +681,11 @@
 "Private note" = "Nota privada";
 
 /* Description for Top Performers left column header
-   Product section title - Section header title for the product */
+   Product section title - Section header title for the product - Title of product detail screen. */
 "Product" = "Producto";
+
+/* Notice displayed when the onscreen product was just deleted. It reads: Product {product number} has been removed from your store. */
+"Product %ld has been removed from your store" = "El producto %ld se ha eliminado de tu tienda";
 
 /* VoiceOver accessibility hint, informing the user that the row can be tapped to get to a prompt that lets them call or message the billing customer. */
 "Prompts with the option to call or message the billing customer." = "Mensajes con la opción de llamar o enviar un mensaje al cliente de la facturación.";
@@ -709,6 +744,9 @@
 /* One Time Code has been sent via SMS */
 "SMS Sent" = "Se ha enviado un SMS";
 
+/* Edit tracking screen - button title to save a tracking */
+"Save" = "Guardar";
+
 /* Orders Search Placeholder */
 "Search all orders" = "Buscar en todos los pedidos";
 
@@ -747,8 +785,14 @@
 /* Shipping label for payment view */
 "Shipping" = "Envío";
 
+/* Title of view displaying all available Shipment Tracking Providers */
+"Shipping Providers" = "Proveedores de envío";
+
 /* Shipping title for customer info cell */
 "Shipping details" = "Detalles del envío";
+
+/* Add / Edit shipping provider. Title of cell presenting name */
+"Shipping provider" = "Proveedor de envío";
 
 /* Footer text to show the billing cell */
 "Show billing" = "Mostrar facturación";
@@ -930,6 +974,9 @@
 /* Settings > Privacy Settings > privacy info section. Explains what we do with the information we collect. */
 "This information helps us improve our products, make marketing to you more relevant, personalize your WordPress.com experience, and more as detailed in our privacy policy." = "Esta información nos ayuda a mejorar nuestros productos, hacer que el marketing sea más relevante, personalizar tu experiencia en WordPress.com y más, tal como se detalla en nuestra política de privacidad.";
 
+/* Message displayed when loading a specific product fails */
+"This product couldn't be loaded" = "No se ha podido cargar el producto";
+
 /* Text instructing the user to enter their email address. */
 "To create your new WordPress.com account, please enter your email address." = "Para crear tu nueva cuenta de WordPress.com, por favor, introduce tu dirección de correo electrónico.";
 
@@ -964,6 +1011,9 @@
 /* Order tracking section title */
 "Tracking" = "Seguimiento";
 
+/* Add / Edit shipping provider. Title of cell presenting tracking number */
+"Tracking number" = "Número de seguimiento";
+
 /* Accessibility label for Shipment tracking number in Order details screen. Reads like: Tracking Number 1AZ234567890 */
 "Tracking number %@" = "Número de seguimiento %@";
 
@@ -991,14 +1041,23 @@
 /* Content of error presented when Add Note Action Failed. It reads: Unable to add note to order #{order number} */
 "Unable to add note to order #(viewModel.order.orderID)" = "No se ha podido añadir la nota al pedido n.º (viewModel.order.orderID)";
 
+/* Content of error presented when Add Shipment Tracking Action Failed. It reads: Unable to add tracking to order #{order number} */
+"Unable to add tracking to order #(orderID)" = "No se ha podido añadir el seguimiento al pedido n.º (orderID)";
+
 /* Content of error presented when updating the status of an Order fails. It reads: Unable to change status of order #{order number} */
 "Unable to change status of order #(orderID)" = "No se ha podido cambiar el estado del pedido n.º (orderID)";
+
+/* Content of error presented when Delete Shipment Tracking Action Failed. It reads: Unable to delete tracking for order #{order number} */
+"Unable to delete tracking for order #(orderID)" = "No se ha podido eliminar el seguimiento del pedido n.º (orderID)";
 
 /* Displayed during the Login flow, whenever the user has no woo stores associated. */
 "Unable to find WooCommerce stores connected to this account" = "No se han podido encontrar tiendas WooCommerce conectadas a esta cuenta";
 
 /* Content of error presented when Fullfill Order Action Failed. It reads: Unable to fulfill order #{order number} */
 "Unable to fulfill order #(orderID)" = "No se ha podido realizar el pedido n.º (orderID)";
+
+/* Content of error presented when loading the list of shipment providers failed. It reads: Unable to load Shipment Providers */
+"Unable to load Shipment Providers" = "No se han podido cargar los proveedores del envío";
 
 /* Load Action Failed */
 "Unable to load content" = "No se ha podido cargar el contenido";
@@ -1008,6 +1067,9 @@
 
 /* No comment provided by engineer. */
 "Unable to read the WordPress site at that URL. Tap 'Need Help?' to view the FAQ." = "No ha sido posible leer el sitio de WordPress en esa dirección URL. Pulsa \"¿Necesitas ayuda?\" para ver las FAQ.";
+
+/* Notice displayed when an error occurs while refreshing a product. It reads: Unable to refresh product #{product number} */
+"Unable to refresh Product #%ld" = "No se ha podido actualizar el producto n.º %ld";
 
 /* Refresh Action Failed */
 "Unable to refresh list" = "No se ha podido actualizar la lista.";
