--- a/WooCommerce/Resources/fr.lproj/Localizable.strings
+++ b/WooCommerce/Resources/fr.lproj/Localizable.strings
@@ -1,4 +1,4 @@
-/* Translation-Revision-Date: 2019-04-16 10:54:03+0000 */
+/* Translation-Revision-Date: 2019-05-02 14:54:03+0000 */
 /* Plural-Forms: nplurals=2; plural=n > 1; */
 /* Generator: GlotPress/2.4.0-alpha */
 /* Language: fr */
@@ -27,10 +27,12 @@
 /* The plugin is active on the site and has enabled automatic updates */
 "Active, Autoupdates on" = "Actif, mises à jour automatiques activées";
 
-/* Add a note screen - button title to send the note */
+/* Add a note screen - button title to send the note
+   Add tracking screen - button title to add a tracking */
 "Add" = "Ajouter";
 
-/* Add Tracking row label */
+/* Add Tracking row label
+   Add tracking screen - title. */
 "Add Tracking" = "Ajouter le suivi";
 
 /* Button text for adding a new order note */
@@ -41,6 +43,9 @@
 
 /* VoiceOver accessibility hint, informing the user that the button can be used to add an order note. */
 "Adds a note to an order" = "Ajoute une note à une commande";
+
+/* VoiceOver accessibility hint, informing the user that the button can be used to add tracking to an order. Should end with a period. */
+"Adds tracking to an order." = "Ajoute un suivi à une commande.";
 
 /* Cell subtitle explaining why you might want to navigate to view the application log. */
 "Advanced tool to review the app status" = "Outil avancé de contrôle de l'état de l'application";
@@ -77,7 +82,7 @@
 "Application Logs" = "Journaux d'application";
 
 /* Change order status screen - button title to apply selection */
-"Apply" = "Apply";
+"Apply" = "Appliquer";
 
 /* Approve a comment */
 "Approve" = "Approuver";
@@ -111,9 +116,6 @@
 
 /* Billing title for customer info cell */
 "Billing details" = "Détails de facturation";
-
-/* Browse our FAQ title */
-"Browse our FAQ" = "Parcourir notre FAQ";
 
 /* Legal disclaimer for signup buttons, the underscores _..._ denote underline */
 "By signing up, you agree to our _Terms of Service_." = "En vous inscrivant, vous acceptez les _Conditions d'Utilisation_.";
@@ -194,6 +196,9 @@
 /* Cell title: the current date. */
 "Current" = "Actuel";
 
+/* Title of button to add a custom tracking provider if filtering the list yields no results. */
+"Custom Provider" = "Prestataire personnalisé";
+
 /* Customer info section title
    Section title for the customer's billing and shipping address */
 "Customer Information" = "Informations sur le client";
@@ -202,11 +207,17 @@
    Section title for a note from the customer */
 "Customer Provided Note" = "Note fournie par le client";
 
+/* Add / Edit shipping provider. Title of cell date shipped */
+"Date shipped" = "Date d'expédition";
+
 /* Statistical unit - a single day */
 "Day" = "Jour";
 
 /* Plural of 'day' — a statistical unit */
 "Days" = "Jours";
+
+/* Delete Tracking button title */
+"Delete Tracking" = "Supprimer le suivi";
 
 /* The row label to tap for a detailed product list */
 "Details" = "Détails";
@@ -218,7 +229,7 @@
 "Discount" = "Réduction";
 
 /* Add a note screen - button title for closing the view
-   Dismiss the action sheet */
+   Dismiss the action sheet - Product details screen - button title for closing the view */
 "Dismiss" = "Ignorer";
 
 /* Label for button to log in using your site address. The underscores _..._ denote underline */
@@ -228,7 +239,7 @@
 "Dotcom Error: [(code)] (theMessage)" = "Erreur Dotcom : [(code)] (theMessage)";
 
 /* WordPress.com error thrown when the the request REST API url is invalid. */
-"Dotcom Invalid REST Route" = "Dotcom Invalid REST Route";
+"Dotcom Invalid REST Route" = "Acheminement REST non valide sur Dotcom";
 
 /* WordPress.com Missing Token */
 "Dotcom Missing Token" = "Jeton Dotcom manquant";
@@ -247,6 +258,15 @@
 
 /* VoiceOver accessibility hint, informing the user that double-tapping will toggle the switch off and on. */
 "Double tap to toggle setting." = "Appuyez deux fois pour changer de paramètre.";
+
+/* Accessibility hint for Pencil button in an individual Shipment Tracking in the order fulfillment screen */
+"Edit" = "Modifier";
+
+/* Edit tracking screen - title. */
+"Edit Tracking" = "Modifier le suivi";
+
+/* Accessibility hint for Edit Shipment button in Order fulfillment screen */
+"Edits a shipment." = "Modifie une livraison.";
 
 /* Email address text field placeholder */
 "Email" = "E-mail";
@@ -309,7 +329,7 @@
 /* Description for Top Performers section of My Store tab. */
 "Gain insights into how products are performing on your store" = "Obtenez des informations sur les performances des produits de votre boutique";
 
-/* Subtitle for Browse our FAQ */
+/* Subtitle for Help Center */
 "Get answers to questions you have" = "Obtenez les réponses à vos questions";
 
 /* Alerts the user that wpcom account information is being retrieved. */
@@ -327,6 +347,9 @@
 
 /* Contact Support Action */
 "Help & Support" = "Aide et assistance";
+
+/* Browse our help documentation website title */
+"Help Center" = "Centre d'aide";
 
 /* My Store > Settings > Privacy settings section */
 "Help Improve The App" = "Aidez-nous à améliorer l’application";
@@ -388,6 +411,9 @@
 /* Displayed when an Order is being retrieved */
 "Loading Order" = "Chargement de la commande";
 
+/* Displayed when an Product is being retrieved */
+"Loading Product" = "Chargement du produit";
+
 /* Button title.  Tapping takes the user to the login form.
    Log In button label. */
 "Log In" = "Connexion";
@@ -416,6 +442,9 @@
 
 /* Sign in instructions on the 'log in using email' screen. */
 "Log in with your WordPress.com account email address to manage your WooCommerce stores." = "Connectez-vous avec l’adresse e-mail de votre compte WordPress.com afin de gérer toutes vos boutiques WooCommerce.";
+
+/* Error message that displays on the 'Log in by entering your site address.' screen. Jetpack is required for logging into the WooCommerce mobile apps. */
+"Looks like your site isn't set up to use this app. Make sure your site has Jetpack installed to continue." = "Il semblerait que votre site ne soit pas configuré pour l'utilisation de cette application. Assurez-vous que Jetpack est bien installé sur votre site pour continuer.";
 
 /* Title of a button. */
 "Lost your password?" = "Mot de passe oublié ?";
@@ -511,8 +540,11 @@
    Orders List (Empty State + Filters) */
 "No results for the selected criteria" = "Aucun résultat pour les critères sélectionnés";
 
+/* Empty state for the list of shipment providers. It reads: 'No results for DHL. Add a custom provider' */
+"No results found for (term)\nAdd a custom provider" = "No results found for (term)\nAdd a custom provider";
+
 /* Order details > tracking.  This is where the shipping date would normally display. */
-"Not shipped yet" = "Not shipped yet";
+"Not shipped yet" = "Non encore livré";
 
 /* Labels an order note to let user know it's visible to the customer
    Spoken accessibility label for an icon image that indicates it's a note to the customer. */
@@ -554,7 +586,7 @@
 "Open Source Licenses" = "Licences open sources";
 
 /* Accessibility hint for the button to update the order status */
-"Opens a list of available statuses." = "Opens a list of available statuses.";
+"Opens a list of available statuses." = "Ouvre une liste des états disponibles.";
 
 /* No comment provided by engineer. */
 "Optional Tracking Information" = "Informations de suivi facultatives";
@@ -570,13 +602,13 @@
 "Order Notes" = "Notes de commande";
 
 /* Change order status screen - Screen title */
-"Order Status" = "Order Status";
+"Order Status" = "État de la commande";
 
 /* Order fulfillment success notice */
 "Order marked as fulfilled" = "Commande marquée comme exécutée";
 
 /* Order status update success notice */
-"Order status updated" = "Order status updated";
+"Order status updated" = "État de la commande mis à jour";
 
 /* Name of the Orders filter on the Notifications screen - it means only order notifications will be displayed. Plural form of the word Order.
    Orders stat label on dashboard - should be plural. - Title of the Orders tab — plural form of Order - Title that appears on top of the Order List screen when there is no filter applied to the list (plural form of the word Order). */
@@ -649,8 +681,11 @@
 "Private note" = "Note privée";
 
 /* Description for Top Performers left column header
-   Product section title - Section header title for the product */
+   Product section title - Section header title for the product - Title of product detail screen. */
 "Product" = "Produit";
+
+/* Notice displayed when the onscreen product was just deleted. It reads: Product {product number} has been removed from your store. */
+"Product %ld has been removed from your store" = "Le produit %ld a été supprimé de votre boutique";
 
 /* VoiceOver accessibility hint, informing the user that the row can be tapped to get to a prompt that lets them call or message the billing customer. */
 "Prompts with the option to call or message the billing customer." = "Invitations avec l’option d’appeler ou d’envoyer un SMS au client de facturation.";
@@ -682,7 +717,7 @@
 "Report Crashes" = "Signaler les incidents";
 
 /* Deletes all activity logs except for the marked 'Current'. */
-"Reset Activity Log" = "Reset Activity Log";
+"Reset Activity Log" = "Réinitialiser le journal d'activité";
 
 /* VoiceOver accessibility hint, informing the user the button can be used to search orders. */
 "Retrieves a list of orders that contain a given keyword." = "Récupère une liste de commandes contenant un mot-clé donné.";
@@ -709,6 +744,9 @@
 /* One Time Code has been sent via SMS */
 "SMS Sent" = "SMS envoyé";
 
+/* Edit tracking screen - button title to save a tracking */
+"Save" = "Enregistrer";
+
 /* Orders Search Placeholder */
 "Search all orders" = "Rechercher toutes les commandes";
 
@@ -716,10 +754,10 @@
 "Search orders" = "Rechercher des commandes";
 
 /* Page title for the select a different store screen */
-"Select Store" = "Select Store";
+"Select Store" = "Sélectionner la boutique";
 
 /* My Store > Settings > Selected Store information section. This is the heading listed above the information row that displays the store website and their username. */
-"Selected Store" = "Selected Store";
+"Selected Store" = "Boutique sélectionnée";
 
 /* Title of a button. The text should be uppercase.  Clicking requests a hyperlink be emailed ot the user. */
 "Send Link" = "Envoyer le lien";
@@ -738,17 +776,23 @@
 "Share your Store" = "Partager votre boutique";
 
 /* Accessibility label for Shipment tracking company in Order details screen. Reads like: Shipment Company USPS */
-"Shipment Company %@" = "Shipment Company %@";
+"Shipment Company %@" = "Société d'expédition %@";
 
 /* Accessibility label for Shipment date in Order details screen. Shipped: February 27, 2018.
    Date an item was shipped */
-"Shipped %@" = "Shipped %@";
+"Shipped %@" = "Livré le %@";
 
 /* Shipping label for payment view */
 "Shipping" = "Expédition";
 
+/* Title of view displaying all available Shipment Tracking Providers */
+"Shipping Providers" = "Transporteurs";
+
 /* Shipping title for customer info cell */
 "Shipping details" = "Détails de livraison";
+
+/* Add / Edit shipping provider. Title of cell presenting name */
+"Shipping provider" = "Transporteur";
 
 /* Footer text to show the billing cell */
 "Show billing" = "Afficher la facturation";
@@ -838,10 +882,10 @@
 "Subtotal" = "Sous-total";
 
 /* This action allows the user to change stores without logging out and logging back in again. */
-"Switch Store" = "Switch Store";
+"Switch Store" = "Changer de boutique";
 
 /* Message presented after users switch to a new store. Reads like: Switched to {store name}. You will only receive notifications from this store. */
-"Switched to (newStoreName). You will only receive notifications from this store." = "Switched to (newStoreName). You will only receive notifications from this store.";
+"Switched to (newStoreName). You will only receive notifications from this store." = "Basculé vers (NomNouvelleBoutique). Vous recevrez uniquement des notifications de cette boutique.";
 
 /* Labels an order note to let user know it's a system status message */
 "System status" = "État du système";
@@ -930,6 +974,9 @@
 /* Settings > Privacy Settings > privacy info section. Explains what we do with the information we collect. */
 "This information helps us improve our products, make marketing to you more relevant, personalize your WordPress.com experience, and more as detailed in our privacy policy." = "Cette information nous aide à améliorer nos produits, faire du marketing plus pertinent pour vous, personnaliser votre expérience avec WordPress.com et plus encore comme détaillé dans notre politique de confidentialité.";
 
+/* Message displayed when loading a specific product fails */
+"This product couldn't be loaded" = "Impossible de charger ce produit";
+
 /* Text instructing the user to enter their email address. */
 "To create your new WordPress.com account, please enter your email address." = "Pour créer votre nouveau compte WordPress.com, veuillez saisir votre adresse e-mail.";
 
@@ -959,16 +1006,19 @@
 "Total orders: %ld" = "Commandes totales : %ld";
 
 /* Track package button title */
-"Track package" = "Track package";
+"Track package" = "Suivre le colis";
 
 /* Order tracking section title */
-"Tracking" = "Tracking";
+"Tracking" = "Suivi";
+
+/* Add / Edit shipping provider. Title of cell presenting tracking number */
+"Tracking number" = "Numéro de suivi";
 
 /* Accessibility label for Shipment tracking number in Order details screen. Reads like: Tracking Number 1AZ234567890 */
-"Tracking number %@" = "Tracking number %@";
+"Tracking number %@" = "Numéro de suivi %@";
 
 /* Accessibility hint for Track Package button in Order details screen */
-"Tracks a shipment." = "Tracks a shipment.";
+"Tracks a shipment." = "Garde trace d'une livraison.";
 
 /* Move a comment to the trash */
 "Trash" = "Trash";
@@ -989,25 +1039,37 @@
 "Unable To Connect" = "Impossible de connecter";
 
 /* Content of error presented when Add Note Action Failed. It reads: Unable to add note to order #{order number} */
-"Unable to add note to order #(viewModel.order.orderID)" = "Unable to add note to order #(viewModel.order.orderID)";
+"Unable to add note to order #(viewModel.order.orderID)" = "Impossible d'ajouter une remarque à la commande n° (viewModel.commande.ID de commande)";
+
+/* Content of error presented when Add Shipment Tracking Action Failed. It reads: Unable to add tracking to order #{order number} */
+"Unable to add tracking to order #(orderID)" = "Impossible d'ajouter le suivi de la commande n° (ID de la commande)";
 
 /* Content of error presented when updating the status of an Order fails. It reads: Unable to change status of order #{order number} */
-"Unable to change status of order #(orderID)" = "Unable to change status of order #(orderID)";
+"Unable to change status of order #(orderID)" = "Impossible de modifier l'état de la commande n° (ID de commande)";
+
+/* Content of error presented when Delete Shipment Tracking Action Failed. It reads: Unable to delete tracking for order #{order number} */
+"Unable to delete tracking for order #(orderID)" = "Impossible de supprimer le suivi de la commande n° (ID de la commande)";
 
 /* Displayed during the Login flow, whenever the user has no woo stores associated. */
 "Unable to find WooCommerce stores connected to this account" = "Boutiques WooCommerce connectées à ce compte introuvables";
 
 /* Content of error presented when Fullfill Order Action Failed. It reads: Unable to fulfill order #{order number} */
-"Unable to fulfill order #(orderID)" = "Unable to fulfill order #(orderID)";
+"Unable to fulfill order #(orderID)" = "Impossible d'exécuter la commande n° (ID de commande)";
+
+/* Content of error presented when loading the list of shipment providers failed. It reads: Unable to load Shipment Providers */
+"Unable to load Shipment Providers" = "Impossible de charger les transporteurs";
 
 /* Load Action Failed */
-"Unable to load content" = "Unable to load content";
+"Unable to load content" = "Impossible de charger le contenu";
 
 /* Review error notice message. It reads: Unable to mark review as {attempted status} */
 "Unable to mark review as %@" = "Unable to mark review as %@";
 
 /* No comment provided by engineer. */
 "Unable to read the WordPress site at that URL. Tap 'Need Help?' to view the FAQ." = "Impossible de trouver un site WordPress à cette adresse. Touchez « Besoin d'aide ? » pour voir la FAQ.";
+
+/* Notice displayed when an error occurs while refreshing a product. It reads: Unable to refresh product #{product number} */
+"Unable to refresh Product #%ld" = "Impossible d'actualiser le produit n° %ld";
 
 /* Refresh Action Failed */
 "Unable to refresh list" = "Impossible d’actualiser la liste";
@@ -1037,7 +1099,7 @@
 "Up to seven days՚ worth of logs are saved." = "Enregistre jusqu'à sept jours de rapports de bugs.";
 
 /* Accessibility label for the button to update the order status in Order Details */
-"Update Order Status" = "Update Order Status";
+"Update Order Status" = "Modifier l'état des commandes";
 
 /* Order updated summary date. It reads: Updated {medium formatted date} at {short style time} */
 "Updated %1$@ at %2$@" = "%1$@ remplacée par %2$@";
