--- a/WooCommerce/Resources/id.lproj/Localizable.strings
+++ b/WooCommerce/Resources/id.lproj/Localizable.strings
@@ -1,4 +1,4 @@
-/* Translation-Revision-Date: 2019-04-16 07:54:02+0000 */
+/* Translation-Revision-Date: 2019-04-30 09:54:24+0000 */
 /* Plural-Forms: nplurals=2; plural=n > 1; */
 /* Generator: GlotPress/2.4.0-alpha */
 /* Language: id */
@@ -27,10 +27,12 @@
 /* The plugin is active on the site and has enabled automatic updates */
 "Active, Autoupdates on" = "Aktif, Pembaruan Otomatis aktif";
 
-/* Add a note screen - button title to send the note */
+/* Add a note screen - button title to send the note
+   Add tracking screen - button title to add a tracking */
 "Add" = "Tambah";
 
-/* Add Tracking row label */
+/* Add Tracking row label
+   Add tracking screen - title. */
 "Add Tracking" = "Tambahkan Pelacakan";
 
 /* Button text for adding a new order note */
@@ -41,6 +43,9 @@
 
 /* VoiceOver accessibility hint, informing the user that the button can be used to add an order note. */
 "Adds a note to an order" = "Menambahkan catatan ke pesanan";
+
+/* VoiceOver accessibility hint, informing the user that the button can be used to add tracking to an order. Should end with a period. */
+"Adds tracking to an order." = "Menambahkan pelacakan ke pesanan.";
 
 /* Cell subtitle explaining why you might want to navigate to view the application log. */
 "Advanced tool to review the app status" = "Alat canggih untuk meninjau status aplikasi";
@@ -111,9 +116,6 @@
 
 /* Billing title for customer info cell */
 "Billing details" = "Detail tagihan";
-
-/* Browse our FAQ title */
-"Browse our FAQ" = "Telusuri Tanya Jawab Umum kami";
 
 /* Legal disclaimer for signup buttons, the underscores _..._ denote underline */
 "By signing up, you agree to our _Terms of Service_." = "Dengan mendaftar, berarti Anda menyetujui _Ketentuan Layanan_ kami.";
@@ -194,6 +196,9 @@
 /* Cell title: the current date. */
 "Current" = "Saat ini";
 
+/* Title of button to add a custom tracking provider if filtering the list yields no results. */
+"Custom Provider" = "Penyedia Kustom";
+
 /* Customer info section title
    Section title for the customer's billing and shipping address */
 "Customer Information" = "Informasi Pelanggan";
@@ -202,11 +207,17 @@
    Section title for a note from the customer */
 "Customer Provided Note" = "Catatan yang Diberikan Pelanggan";
 
+/* Add / Edit shipping provider. Title of cell date shipped */
+"Date shipped" = "Tanggal pengiriman";
+
 /* Statistical unit - a single day */
 "Day" = "Hari";
 
 /* Plural of 'day' — a statistical unit */
 "Days" = "Hari";
+
+/* Delete Tracking button title */
+"Delete Tracking" = "Hapus Pelacakan";
 
 /* The row label to tap for a detailed product list */
 "Details" = "Rincian";
@@ -218,7 +229,7 @@
 "Discount" = "Diskon";
 
 /* Add a note screen - button title for closing the view
-   Dismiss the action sheet */
+   Dismiss the action sheet - Product details screen - button title for closing the view */
 "Dismiss" = "Hentikan";
 
 /* Label for button to log in using your site address. The underscores _..._ denote underline */
@@ -247,6 +258,15 @@
 
 /* VoiceOver accessibility hint, informing the user that double-tapping will toggle the switch off and on. */
 "Double tap to toggle setting." = "Ketuk dua kali untuk mengaktifkan\/menonaktifkan pengaturan.";
+
+/* Accessibility hint for Pencil button in an individual Shipment Tracking in the order fulfillment screen */
+"Edit" = "Sunting";
+
+/* Edit tracking screen - title. */
+"Edit Tracking" = "Sunting Pelacakan";
+
+/* Accessibility hint for Edit Shipment button in Order fulfillment screen */
+"Edits a shipment." = "Menyunting pengiriman.";
 
 /* Email address text field placeholder */
 "Email" = "Surel";
@@ -309,7 +329,7 @@
 /* Description for Top Performers section of My Store tab. */
 "Gain insights into how products are performing on your store" = "Dapatkan informasi mengenai performa produk di toko Anda";
 
-/* Subtitle for Browse our FAQ */
+/* Subtitle for Help Center */
 "Get answers to questions you have" = "Dapatkan jawaban atas pertanyaan Anda";
 
 /* Alerts the user that wpcom account information is being retrieved. */
@@ -327,6 +347,9 @@
 
 /* Contact Support Action */
 "Help & Support" = "Bantuan & Dukungan";
+
+/* Browse our help documentation website title */
+"Help Center" = "Pusat Bantuan";
 
 /* My Store > Settings > Privacy settings section */
 "Help Improve The App" = "Bantu Meningkatkan Kualitas Aplikasi";
@@ -388,6 +411,9 @@
 /* Displayed when an Order is being retrieved */
 "Loading Order" = "Memuat Pesanan";
 
+/* Displayed when an Product is being retrieved */
+"Loading Product" = "Memuat Produk";
+
 /* Button title.  Tapping takes the user to the login form.
    Log In button label. */
 "Log In" = "Masuk";
@@ -416,6 +442,9 @@
 
 /* Sign in instructions on the 'log in using email' screen. */
 "Log in with your WordPress.com account email address to manage your WooCommerce stores." = "Login dengan alamat email akun WordPress.com Anda untuk mengelola toko WooCommerce.";
+
+/* Error message that displays on the 'Log in by entering your site address.' screen. Jetpack is required for logging into the WooCommerce mobile apps. */
+"Looks like your site isn't set up to use this app. Make sure your site has Jetpack installed to continue." = "Sepertinya situs Anda belum disiapkan untuk menggunakan aplikasi ini. Pastikan Jetpack sudah diinstal di situs Anda untuk melanjutkan.";
 
 /* Title of a button. */
 "Lost your password?" = "Lupa sandi Anda?";
@@ -510,6 +539,9 @@
 /* Notifications List (Empty State + Filters)
    Orders List (Empty State + Filters) */
 "No results for the selected criteria" = "Tidak ada hasil untuk kriteria yang dipilih";
+
+/* Empty state for the list of shipment providers. It reads: 'No results for DHL. Add a custom provider' */
+"No results found for (term)\nAdd a custom provider" = "No results found for (term)\nAdd a custom provider";
 
 /* Order details > tracking.  This is where the shipping date would normally display. */
 "Not shipped yet" = "Belum dikirimkan";
@@ -649,8 +681,11 @@
 "Private note" = "Catatan privat";
 
 /* Description for Top Performers left column header
-   Product section title - Section header title for the product */
+   Product section title - Section header title for the product - Title of product detail screen. */
 "Product" = "Produk";
+
+/* Notice displayed when the onscreen product was just deleted. It reads: Product {product number} has been removed from your store. */
+"Product %ld has been removed from your store" = "Produk %ld telah dihapus dari toko Anda";
 
 /* VoiceOver accessibility hint, informing the user that the row can be tapped to get to a prompt that lets them call or message the billing customer. */
 "Prompts with the option to call or message the billing customer." = "Berikan pilihan untuk menelepon atau mengirim pesan ke pelanggan tertagih.";
@@ -709,6 +744,9 @@
 /* One Time Code has been sent via SMS */
 "SMS Sent" = "SMS Terkirim";
 
+/* Edit tracking screen - button title to save a tracking */
+"Save" = "Simpan";
+
 /* Orders Search Placeholder */
 "Search all orders" = "Cari semua pesanan";
 
@@ -747,8 +785,14 @@
 /* Shipping label for payment view */
 "Shipping" = "Pengiriman";
 
+/* Title of view displaying all available Shipment Tracking Providers */
+"Shipping Providers" = "Penyedia Pengiriman";
+
 /* Shipping title for customer info cell */
 "Shipping details" = "Detail pengiriman";
+
+/* Add / Edit shipping provider. Title of cell presenting name */
+"Shipping provider" = "Penyedia pengiriman";
 
 /* Footer text to show the billing cell */
 "Show billing" = "Tampilkan tagihan";
@@ -930,6 +974,9 @@
 /* Settings > Privacy Settings > privacy info section. Explains what we do with the information we collect. */
 "This information helps us improve our products, make marketing to you more relevant, personalize your WordPress.com experience, and more as detailed in our privacy policy." = "Informasi ini membantu kami menyempurnakan produk, membuat pemasaran kepada Anda jadi lebih relevan, menyesuaikan pengalaman WordPress.com Anda, dan lainnya seperti yang dijelaskan dalam kebijakan privasi kami.";
 
+/* Message displayed when loading a specific product fails */
+"This product couldn't be loaded" = "Produk ini tidak dapat dimuat";
+
 /* Text instructing the user to enter their email address. */
 "To create your new WordPress.com account, please enter your email address." = "Untuk membuat akun WordPress.com Anda yang baru, masukkan alamat email Anda.";
 
@@ -964,6 +1011,9 @@
 /* Order tracking section title */
 "Tracking" = "Pelacakan";
 
+/* Add / Edit shipping provider. Title of cell presenting tracking number */
+"Tracking number" = "Nomor pelacakan";
+
 /* Accessibility label for Shipment tracking number in Order details screen. Reads like: Tracking Number 1AZ234567890 */
 "Tracking number %@" = "Nomor pelacakan %@";
 
@@ -991,14 +1041,23 @@
 /* Content of error presented when Add Note Action Failed. It reads: Unable to add note to order #{order number} */
 "Unable to add note to order #(viewModel.order.orderID)" = "Tidak dapat menambahkan catatan ke pesanan #(viewModel.order.orderID)";
 
+/* Content of error presented when Add Shipment Tracking Action Failed. It reads: Unable to add tracking to order #{order number} */
+"Unable to add tracking to order #(orderID)" = "Tidak dapat menambahkan pelacakan untuk pesanan #(orderID)";
+
 /* Content of error presented when updating the status of an Order fails. It reads: Unable to change status of order #{order number} */
 "Unable to change status of order #(orderID)" = "Tidak dapat mengubah status pesanan #(orderID)";
+
+/* Content of error presented when Delete Shipment Tracking Action Failed. It reads: Unable to delete tracking for order #{order number} */
+"Unable to delete tracking for order #(orderID)" = "Tidak dapat menghapus pelacakan untuk pesanan #(orderID)";
 
 /* Displayed during the Login flow, whenever the user has no woo stores associated. */
 "Unable to find WooCommerce stores connected to this account" = "Tidak dapat menemukan toko WooCommerce yang terhubung ke akun ini";
 
 /* Content of error presented when Fullfill Order Action Failed. It reads: Unable to fulfill order #{order number} */
 "Unable to fulfill order #(orderID)" = "Tidak dapat memenuhi pesanan #(orderID)";
+
+/* Content of error presented when loading the list of shipment providers failed. It reads: Unable to load Shipment Providers */
+"Unable to load Shipment Providers" = "Tidak dapat memuat Penyedia Pengiriman";
 
 /* Load Action Failed */
 "Unable to load content" = "Tidak dapat memuat konten";
@@ -1008,6 +1067,9 @@
 
 /* No comment provided by engineer. */
 "Unable to read the WordPress site at that URL. Tap 'Need Help?' to view the FAQ." = "Tidak dapat membaca situs WordPress dalam URL tersebut. Ketuk 'Butuh Bantuan?' untuk melihat FAQ.";
+
+/* Notice displayed when an error occurs while refreshing a product. It reads: Unable to refresh product #{product number} */
+"Unable to refresh Product #%ld" = "Tidak dapat menyegarkan Produk #%ld";
 
 /* Refresh Action Failed */
 "Unable to refresh list" = "Tidak dapat menyegarkan daftar";
