--- a/WooCommerce/Resources/it.lproj/Localizable.strings
+++ b/WooCommerce/Resources/it.lproj/Localizable.strings
@@ -1,4 +1,4 @@
-/* Translation-Revision-Date: 2019-04-15 14:54:02+0000 */
+/* Translation-Revision-Date: 2019-05-02 12:54:03+0000 */
 /* Plural-Forms: nplurals=2; plural=n != 1; */
 /* Generator: GlotPress/2.4.0-alpha */
 /* Language: it */
@@ -27,10 +27,12 @@
 /* The plugin is active on the site and has enabled automatic updates */
 "Active, Autoupdates on" = "Attivo, Aggiornamenti automatici attivi ";
 
-/* Add a note screen - button title to send the note */
+/* Add a note screen - button title to send the note
+   Add tracking screen - button title to add a tracking */
 "Add" = "Aggiungi";
 
-/* Add Tracking row label */
+/* Add Tracking row label
+   Add tracking screen - title. */
 "Add Tracking" = "Aggiungi monitoraggio";
 
 /* Button text for adding a new order note */
@@ -41,6 +43,9 @@
 
 /* VoiceOver accessibility hint, informing the user that the button can be used to add an order note. */
 "Adds a note to an order" = "Aggiunge una nota a un ordine";
+
+/* VoiceOver accessibility hint, informing the user that the button can be used to add tracking to an order. Should end with a period. */
+"Adds tracking to an order." = "Aggiungi tracciabilità a un ordine.";
 
 /* Cell subtitle explaining why you might want to navigate to view the application log. */
 "Advanced tool to review the app status" = "Strumento avanzato per la revisione dello stato dell'app";
@@ -111,9 +116,6 @@
 
 /* Billing title for customer info cell */
 "Billing details" = "Dati di fatturazione";
-
-/* Browse our FAQ title */
-"Browse our FAQ" = "Leggi le nostre FAQ";
 
 /* Legal disclaimer for signup buttons, the underscores _..._ denote underline */
 "By signing up, you agree to our _Terms of Service_." = "Iscrivendoti, accetti i nostri _Termini di servizio_.";
@@ -194,6 +196,9 @@
 /* Cell title: the current date. */
 "Current" = "Attuale";
 
+/* Title of button to add a custom tracking provider if filtering the list yields no results. */
+"Custom Provider" = "Fornitore personalizzato";
+
 /* Customer info section title
    Section title for the customer's billing and shipping address */
 "Customer Information" = "Informazioni cliente";
@@ -202,11 +207,17 @@
    Section title for a note from the customer */
 "Customer Provided Note" = "Nota fornita dai clienti";
 
+/* Add / Edit shipping provider. Title of cell date shipped */
+"Date shipped" = "Data di spedizione";
+
 /* Statistical unit - a single day */
 "Day" = "Giorno";
 
 /* Plural of 'day' — a statistical unit */
 "Days" = "Giorni";
+
+/* Delete Tracking button title */
+"Delete Tracking" = "Elimina tracciabilità";
 
 /* The row label to tap for a detailed product list */
 "Details" = "Detagli";
@@ -218,7 +229,7 @@
 "Discount" = "Sconto";
 
 /* Add a note screen - button title for closing the view
-   Dismiss the action sheet */
+   Dismiss the action sheet - Product details screen - button title for closing the view */
 "Dismiss" = "Respinto";
 
 /* Label for button to log in using your site address. The underscores _..._ denote underline */
@@ -247,6 +258,15 @@
 
 /* VoiceOver accessibility hint, informing the user that double-tapping will toggle the switch off and on. */
 "Double tap to toggle setting." = "Tocca due volte per attivare\/disattivare l'impostazione.";
+
+/* Accessibility hint for Pencil button in an individual Shipment Tracking in the order fulfillment screen */
+"Edit" = "Modifica";
+
+/* Edit tracking screen - title. */
+"Edit Tracking" = "Modifica tracciabilità";
+
+/* Accessibility hint for Edit Shipment button in Order fulfillment screen */
+"Edits a shipment." = "Modifica una spedizione.";
 
 /* Email address text field placeholder */
 "Email" = "E-mail";
@@ -309,7 +329,7 @@
 /* Description for Top Performers section of My Store tab. */
 "Gain insights into how products are performing on your store" = "Ottieni informazioni su come i prodotti vengono tracciati nel negozio";
 
-/* Subtitle for Browse our FAQ */
+/* Subtitle for Help Center */
 "Get answers to questions you have" = "Ottieni risposte alle tue domande";
 
 /* Alerts the user that wpcom account information is being retrieved. */
@@ -327,6 +347,9 @@
 
 /* Contact Support Action */
 "Help & Support" = "Aiuto e supporto";
+
+/* Browse our help documentation website title */
+"Help Center" = "Centro assistenza";
 
 /* My Store > Settings > Privacy settings section */
 "Help Improve The App" = "Aiutaci a migliorare l'app";
@@ -388,6 +411,9 @@
 /* Displayed when an Order is being retrieved */
 "Loading Order" = "Caricamento dell'ordine";
 
+/* Displayed when an Product is being retrieved */
+"Loading Product" = "Caricamento prodotto";
+
 /* Button title.  Tapping takes the user to the login form.
    Log In button label. */
 "Log In" = "Accedi";
@@ -416,6 +442,9 @@
 
 /* Sign in instructions on the 'log in using email' screen. */
 "Log in with your WordPress.com account email address to manage your WooCommerce stores." = "Accedi con l'indirizzo e-mail dell'account WordPress.com per gestire i negozi WooCommerce.";
+
+/* Error message that displays on the 'Log in by entering your site address.' screen. Jetpack is required for logging into the WooCommerce mobile apps. */
+"Looks like your site isn't set up to use this app. Make sure your site has Jetpack installed to continue." = "Sembra che il tuo sito non sia configurato per usare questa app. Assicurati che Jetpack sia installato sul tuo sito per continuare.";
 
 /* Title of a button. */
 "Lost your password?" = "Password persa?";
@@ -510,6 +539,9 @@
 /* Notifications List (Empty State + Filters)
    Orders List (Empty State + Filters) */
 "No results for the selected criteria" = "Nessun risultato per i criteri selezionati";
+
+/* Empty state for the list of shipment providers. It reads: 'No results for DHL. Add a custom provider' */
+"No results found for (term)\nAdd a custom provider" = "No results found for (term)\nAdd a custom provider";
 
 /* Order details > tracking.  This is where the shipping date would normally display. */
 "Not shipped yet" = "Non ancora spedito";
@@ -649,8 +681,11 @@
 "Private note" = "Nota privata";
 
 /* Description for Top Performers left column header
-   Product section title - Section header title for the product */
+   Product section title - Section header title for the product - Title of product detail screen. */
 "Product" = "Prodotto";
+
+/* Notice displayed when the onscreen product was just deleted. It reads: Product {product number} has been removed from your store. */
+"Product %ld has been removed from your store" = "Il prodotto %ld è stato rimosso dal tuo negozio";
 
 /* VoiceOver accessibility hint, informing the user that the row can be tapped to get to a prompt that lets them call or message the billing customer. */
 "Prompts with the option to call or message the billing customer." = "Richiede l'opzione per chiamare o inviare messaggi al cliente della fatturazione.";
@@ -709,6 +744,9 @@
 /* One Time Code has been sent via SMS */
 "SMS Sent" = "Sms inviato";
 
+/* Edit tracking screen - button title to save a tracking */
+"Save" = "Salva";
+
 /* Orders Search Placeholder */
 "Search all orders" = "Cerca tutti gli ordini";
 
@@ -747,8 +785,14 @@
 /* Shipping label for payment view */
 "Shipping" = "Spedizione";
 
+/* Title of view displaying all available Shipment Tracking Providers */
+"Shipping Providers" = "Spedizionieri";
+
 /* Shipping title for customer info cell */
 "Shipping details" = "Dati di spedizione";
+
+/* Add / Edit shipping provider. Title of cell presenting name */
+"Shipping provider" = "Spedizioniere";
 
 /* Footer text to show the billing cell */
 "Show billing" = "Mostra fatturazione";
@@ -930,6 +974,9 @@
 /* Settings > Privacy Settings > privacy info section. Explains what we do with the information we collect. */
 "This information helps us improve our products, make marketing to you more relevant, personalize your WordPress.com experience, and more as detailed in our privacy policy." = "Queste informazioni ci aiutano a migliorare i prodotti, offrire proposte di marketing più pertinenti, personalizzare l’esperienza WordPress.com e molto altro, come indicato nel dettaglio nella nostra politica sulla privacy.";
 
+/* Message displayed when loading a specific product fails */
+"This product couldn't be loaded" = "Non è stato possibile caricare questo prodotto";
+
 /* Text instructing the user to enter their email address. */
 "To create your new WordPress.com account, please enter your email address." = "Per creare il tuo nuovo account WordPress.com, inserisci il tuo indirizzo e-mail.";
 
@@ -964,6 +1011,9 @@
 /* Order tracking section title */
 "Tracking" = "Tracciabilità";
 
+/* Add / Edit shipping provider. Title of cell presenting tracking number */
+"Tracking number" = "Numero di tracciabilità";
+
 /* Accessibility label for Shipment tracking number in Order details screen. Reads like: Tracking Number 1AZ234567890 */
 "Tracking number %@" = "Numero di tracciabilità %@";
 
@@ -991,14 +1041,23 @@
 /* Content of error presented when Add Note Action Failed. It reads: Unable to add note to order #{order number} */
 "Unable to add note to order #(viewModel.order.orderID)" = "Impossibile aggiungere una nota all’ordine #(viewModel.order.orderID)";
 
+/* Content of error presented when Add Shipment Tracking Action Failed. It reads: Unable to add tracking to order #{order number} */
+"Unable to add tracking to order #(orderID)" = "Impossibile aggiungere la tracciabilità all'ordine #(orderID)";
+
 /* Content of error presented when updating the status of an Order fails. It reads: Unable to change status of order #{order number} */
 "Unable to change status of order #(orderID)" = "Impossibile modificare lo stato dell’ordine #(orderID)";
+
+/* Content of error presented when Delete Shipment Tracking Action Failed. It reads: Unable to delete tracking for order #{order number} */
+"Unable to delete tracking for order #(orderID)" = "Impossibile eliminare la tracciabilità dell'ordine #(orderID)";
 
 /* Displayed during the Login flow, whenever the user has no woo stores associated. */
 "Unable to find WooCommerce stores connected to this account" = "Impossibile trovare negozi WooCommerce collegati a questo account";
 
 /* Content of error presented when Fullfill Order Action Failed. It reads: Unable to fulfill order #{order number} */
 "Unable to fulfill order #(orderID)" = "Impossibile evadere l'ordine #(orderID)";
+
+/* Content of error presented when loading the list of shipment providers failed. It reads: Unable to load Shipment Providers */
+"Unable to load Shipment Providers" = "Impossibile caricare gli spedizionieri";
 
 /* Load Action Failed */
 "Unable to load content" = "Impossibile caricare i contenuti";
@@ -1008,6 +1067,9 @@
 
 /* No comment provided by engineer. */
 "Unable to read the WordPress site at that URL. Tap 'Need Help?' to view the FAQ." = "Non è stato trovato un sito WordPress all'URL che hai inserito. Tocca 'Bisogno di Aiuto?' per visualizzare le FAQ.";
+
+/* Notice displayed when an error occurs while refreshing a product. It reads: Unable to refresh product #{product number} */
+"Unable to refresh Product #%ld" = "Impossibile aggiornare il prodotto n. %ld";
 
 /* Refresh Action Failed */
 "Unable to refresh list" = "Impossibile aggiornare l'elenco";
