--- a/WooCommerce/Resources/ja.lproj/Localizable.strings
+++ b/WooCommerce/Resources/ja.lproj/Localizable.strings
@@ -1,4 +1,4 @@
-/* Translation-Revision-Date: 2019-04-17 01:54:03+0000 */
+/* Translation-Revision-Date: 2019-05-03 03:54:03+0000 */
 /* Plural-Forms: nplurals=1; plural=0; */
 /* Generator: GlotPress/2.4.0-alpha */
 /* Language: ja_JP */
@@ -27,10 +27,12 @@
 /* The plugin is active on the site and has enabled automatic updates */
 "Active, Autoupdates on" = "プラグイン有効化中。自動更新オン。";
 
-/* Add a note screen - button title to send the note */
+/* Add a note screen - button title to send the note
+   Add tracking screen - button title to add a tracking */
 "Add" = "追加";
 
-/* Add Tracking row label */
+/* Add Tracking row label
+   Add tracking screen - title. */
 "Add Tracking" = "トラッキングを追加";
 
 /* Button text for adding a new order note */
@@ -41,6 +43,9 @@
 
 /* VoiceOver accessibility hint, informing the user that the button can be used to add an order note. */
 "Adds a note to an order" = "注文にメモを追加します";
+
+/* VoiceOver accessibility hint, informing the user that the button can be used to add tracking to an order. Should end with a period. */
+"Adds tracking to an order." = "注文に追跡を追加";
 
 /* Cell subtitle explaining why you might want to navigate to view the application log. */
 "Advanced tool to review the app status" = "Advanced tool to review the app status";
@@ -111,9 +116,6 @@
 
 /* Billing title for customer info cell */
 "Billing details" = "請求詳細";
-
-/* Browse our FAQ title */
-"Browse our FAQ" = "よく聞かれる質問を表示";
 
 /* Legal disclaimer for signup buttons, the underscores _..._ denote underline */
 "By signing up, you agree to our _Terms of Service_." = "登録することで、利用規約に合意したことになります。";
@@ -194,6 +196,9 @@
 /* Cell title: the current date. */
 "Current" = "Current";
 
+/* Title of button to add a custom tracking provider if filtering the list yields no results. */
+"Custom Provider" = "カスタムプロバイダー";
+
 /* Customer info section title
    Section title for the customer's billing and shipping address */
 "Customer Information" = "顧客情報";
@@ -202,11 +207,17 @@
    Section title for a note from the customer */
 "Customer Provided Note" = "顧客提供メモ";
 
+/* Add / Edit shipping provider. Title of cell date shipped */
+"Date shipped" = "出荷日";
+
 /* Statistical unit - a single day */
 "Day" = "日";
 
 /* Plural of 'day' — a statistical unit */
 "Days" = "日";
+
+/* Delete Tracking button title */
+"Delete Tracking" = "追跡を削除";
 
 /* The row label to tap for a detailed product list */
 "Details" = "詳細";
@@ -218,7 +229,7 @@
 "Discount" = "割引";
 
 /* Add a note screen - button title for closing the view
-   Dismiss the action sheet */
+   Dismiss the action sheet - Product details screen - button title for closing the view */
 "Dismiss" = "非表示";
 
 /* Label for button to log in using your site address. The underscores _..._ denote underline */
@@ -247,6 +258,15 @@
 
 /* VoiceOver accessibility hint, informing the user that double-tapping will toggle the switch off and on. */
 "Double tap to toggle setting." = "設定を切り替えるにはダブルタップします。";
+
+/* Accessibility hint for Pencil button in an individual Shipment Tracking in the order fulfillment screen */
+"Edit" = "編集";
+
+/* Edit tracking screen - title. */
+"Edit Tracking" = "追跡を編集";
+
+/* Accessibility hint for Edit Shipment button in Order fulfillment screen */
+"Edits a shipment." = "荷物を編集します。";
 
 /* Email address text field placeholder */
 "Email" = "メール";
@@ -309,7 +329,7 @@
 /* Description for Top Performers section of My Store tab. */
 "Gain insights into how products are performing on your store" = "ストアでの商品売り上げ状況の統計概要をチェック";
 
-/* Subtitle for Browse our FAQ */
+/* Subtitle for Help Center */
 "Get answers to questions you have" = "不明な点について問い合わせます";
 
 /* Alerts the user that wpcom account information is being retrieved. */
@@ -327,6 +347,9 @@
 
 /* Contact Support Action */
 "Help & Support" = "ヘルプ & サポート";
+
+/* Browse our help documentation website title */
+"Help Center" = "ヘルプセンター";
 
 /* My Store > Settings > Privacy settings section */
 "Help Improve The App" = "アプリの改善にご協力ください";
@@ -388,6 +411,9 @@
 /* Displayed when an Order is being retrieved */
 "Loading Order" = "注文を読み込み中";
 
+/* Displayed when an Product is being retrieved */
+"Loading Product" = "商品を読み込み中";
+
 /* Button title.  Tapping takes the user to the login form.
    Log In button label. */
 "Log In" = "ログイン";
@@ -416,6 +442,9 @@
 
 /* Sign in instructions on the 'log in using email' screen. */
 "Log in with your WordPress.com account email address to manage your WooCommerce stores." = "WooCommerce ストアを管理するには、WordPress.com アカウントのメールアドレスを使用してログインします。";
+
+/* Error message that displays on the 'Log in by entering your site address.' screen. Jetpack is required for logging into the WooCommerce mobile apps. */
+"Looks like your site isn't set up to use this app. Make sure your site has Jetpack installed to continue." = "お客様のサイトはこのアプリを使用するように設定されていないようです。続行するには、サイトに Jetpack がインストールされていることをご確認ください。";
 
 /* Title of a button. */
 "Lost your password?" = "パスワードをお忘れですか ?";
@@ -510,6 +539,9 @@
 /* Notifications List (Empty State + Filters)
    Orders List (Empty State + Filters) */
 "No results for the selected criteria" = "選択した基準と一致する結果はありません";
+
+/* Empty state for the list of shipment providers. It reads: 'No results for DHL. Add a custom provider' */
+"No results found for (term)\nAdd a custom provider" = "No results found for (term)\nAdd a custom provider";
 
 /* Order details > tracking.  This is where the shipping date would normally display. */
 "Not shipped yet" = "まだ出荷されていません";
@@ -649,8 +681,11 @@
 "Private note" = "プライベートメモ";
 
 /* Description for Top Performers left column header
-   Product section title - Section header title for the product */
+   Product section title - Section header title for the product - Title of product detail screen. */
 "Product" = "商品";
+
+/* Notice displayed when the onscreen product was just deleted. It reads: Product {product number} has been removed from your store. */
+"Product %ld has been removed from your store" = "商品 %ld がストアから削除されました";
 
 /* VoiceOver accessibility hint, informing the user that the row can be tapped to get to a prompt that lets them call or message the billing customer. */
 "Prompts with the option to call or message the billing customer." = "請求対象の顧客に電話で連絡するかメッセージを送信するか選択するよう求めます。";
@@ -709,6 +744,9 @@
 /* One Time Code has been sent via SMS */
 "SMS Sent" = "SMS 送信完了";
 
+/* Edit tracking screen - button title to save a tracking */
+"Save" = "保存";
+
 /* Orders Search Placeholder */
 "Search all orders" = "すべての注文を検索";
 
@@ -747,8 +785,14 @@
 /* Shipping label for payment view */
 "Shipping" = "配送";
 
+/* Title of view displaying all available Shipment Tracking Providers */
+"Shipping Providers" = "配送業者";
+
 /* Shipping title for customer info cell */
 "Shipping details" = "配送詳細";
+
+/* Add / Edit shipping provider. Title of cell presenting name */
+"Shipping provider" = "配送業者";
 
 /* Footer text to show the billing cell */
 "Show billing" = "請求情報を表示";
@@ -930,6 +974,9 @@
 /* Settings > Privacy Settings > privacy info section. Explains what we do with the information we collect. */
 "This information helps us improve our products, make marketing to you more relevant, personalize your WordPress.com experience, and more as detailed in our privacy policy." = "この情報は、製品を改善し、マーケティングをより関連性の高いものとし、WordPress.com の利用をパーソナライズするのに役立ちます。さらに詳しくは、個人情報保護方針をご覧ください。";
 
+/* Message displayed when loading a specific product fails */
+"This product couldn't be loaded" = "この商品を読み込めませんでした";
+
 /* Text instructing the user to enter their email address. */
 "To create your new WordPress.com account, please enter your email address." = "新しい WordPress.com アカウントを作成するには、メールアドレスを入力してください。";
 
@@ -964,6 +1011,9 @@
 /* Order tracking section title */
 "Tracking" = "追跡";
 
+/* Add / Edit shipping provider. Title of cell presenting tracking number */
+"Tracking number" = "追跡番号";
+
 /* Accessibility label for Shipment tracking number in Order details screen. Reads like: Tracking Number 1AZ234567890 */
 "Tracking number %@" = "追跡番号: %@";
 
@@ -991,14 +1041,23 @@
 /* Content of error presented when Add Note Action Failed. It reads: Unable to add note to order #{order number} */
 "Unable to add note to order #(viewModel.order.orderID)" = "注文 #(viewModel.order.orderID) にメモを追加できません";
 
+/* Content of error presented when Add Shipment Tracking Action Failed. It reads: Unable to add tracking to order #{order number} */
+"Unable to add tracking to order #(orderID)" = "注文番号 (orderID) の追跡を追加できません";
+
 /* Content of error presented when updating the status of an Order fails. It reads: Unable to change status of order #{order number} */
 "Unable to change status of order #(orderID)" = "注文 #(orderID) のステータスを変更できません";
+
+/* Content of error presented when Delete Shipment Tracking Action Failed. It reads: Unable to delete tracking for order #{order number} */
+"Unable to delete tracking for order #(orderID)" = "注文番号 (orderID) を削除できません";
 
 /* Displayed during the Login flow, whenever the user has no woo stores associated. */
 "Unable to find WooCommerce stores connected to this account" = "このアカウントに連携している WooCommerce ストアが見つかりません";
 
 /* Content of error presented when Fullfill Order Action Failed. It reads: Unable to fulfill order #{order number} */
 "Unable to fulfill order #(orderID)" = "注文 #(orderID) を受け付けられません";
+
+/* Content of error presented when loading the list of shipment providers failed. It reads: Unable to load Shipment Providers */
+"Unable to load Shipment Providers" = "配送業者を読み込めません";
 
 /* Load Action Failed */
 "Unable to load content" = "コンテンツを読み込めませんでした";
@@ -1008,6 +1067,9 @@
 
 /* No comment provided by engineer. */
 "Unable to read the WordPress site at that URL. Tap 'Need Help?' to view the FAQ." = "ご指定の URL に WordPress サイトが見つかりませんでした。「ヘルプ !」をタップしてよくある質問をご覧ください。";
+
+/* Notice displayed when an error occurs while refreshing a product. It reads: Unable to refresh product #{product number} */
+"Unable to refresh Product #%ld" = "商品番号%ldを更新できません";
 
 /* Refresh Action Failed */
 "Unable to refresh list" = "リストを更新できません";
