--- a/WooCommerce/Resources/ko.lproj/Localizable.strings
+++ b/WooCommerce/Resources/ko.lproj/Localizable.strings
@@ -1,4 +1,4 @@
-/* Translation-Revision-Date: 2019-04-16 08:54:03+0000 */
+/* Translation-Revision-Date: 2019-05-02 06:54:03+0000 */
 /* Plural-Forms: nplurals=1; plural=0; */
 /* Generator: GlotPress/2.4.0-alpha */
 /* Language: ko_KR */
@@ -27,10 +27,12 @@
 /* The plugin is active on the site and has enabled automatic updates */
 "Active, Autoupdates on" = "활성화, 자동 업데이트 켜기";
 
-/* Add a note screen - button title to send the note */
+/* Add a note screen - button title to send the note
+   Add tracking screen - button title to add a tracking */
 "Add" = "추가";
 
-/* Add Tracking row label */
+/* Add Tracking row label
+   Add tracking screen - title. */
 "Add Tracking" = "추적 추가";
 
 /* Button text for adding a new order note */
@@ -41,6 +43,9 @@
 
 /* VoiceOver accessibility hint, informing the user that the button can be used to add an order note. */
 "Adds a note to an order" = "주문에 메모 추가";
+
+/* VoiceOver accessibility hint, informing the user that the button can be used to add tracking to an order. Should end with a period. */
+"Adds tracking to an order." = "주문에 대한 추적을 추가합니다.";
 
 /* Cell subtitle explaining why you might want to navigate to view the application log. */
 "Advanced tool to review the app status" = "앱 상태를 검토하는 고급 도구";
@@ -111,9 +116,6 @@
 
 /* Billing title for customer info cell */
 "Billing details" = "청구 상세 내역";
-
-/* Browse our FAQ title */
-"Browse our FAQ" = "FAQ 찾아보기";
 
 /* Legal disclaimer for signup buttons, the underscores _..._ denote underline */
 "By signing up, you agree to our _Terms of Service_." = "가입하려면 _서비스 약관_에 동의해야 합니다.";
@@ -194,6 +196,9 @@
 /* Cell title: the current date. */
 "Current" = "현재";
 
+/* Title of button to add a custom tracking provider if filtering the list yields no results. */
+"Custom Provider" = "사용자 정의 공급업체";
+
 /* Customer info section title
    Section title for the customer's billing and shipping address */
 "Customer Information" = "고객 정보";
@@ -202,11 +207,17 @@
    Section title for a note from the customer */
 "Customer Provided Note" = "고객이 남긴 메모";
 
+/* Add / Edit shipping provider. Title of cell date shipped */
+"Date shipped" = "배송일";
+
 /* Statistical unit - a single day */
 "Day" = "일";
 
 /* Plural of 'day' — a statistical unit */
 "Days" = "일";
+
+/* Delete Tracking button title */
+"Delete Tracking" = "추적 삭제";
 
 /* The row label to tap for a detailed product list */
 "Details" = "세부사항";
@@ -218,7 +229,7 @@
 "Discount" = "할인";
 
 /* Add a note screen - button title for closing the view
-   Dismiss the action sheet */
+   Dismiss the action sheet - Product details screen - button title for closing the view */
 "Dismiss" = "무시";
 
 /* Label for button to log in using your site address. The underscores _..._ denote underline */
@@ -247,6 +258,15 @@
 
 /* VoiceOver accessibility hint, informing the user that double-tapping will toggle the switch off and on. */
 "Double tap to toggle setting." = "설정을 전환하려면 두 번 누르세요.";
+
+/* Accessibility hint for Pencil button in an individual Shipment Tracking in the order fulfillment screen */
+"Edit" = "편집";
+
+/* Edit tracking screen - title. */
+"Edit Tracking" = "추적 편집";
+
+/* Accessibility hint for Edit Shipment button in Order fulfillment screen */
+"Edits a shipment." = "배송물을 편집합니다.";
 
 /* Email address text field placeholder */
 "Email" = "이메일";
@@ -309,7 +329,7 @@
 /* Description for Top Performers section of My Store tab. */
 "Gain insights into how products are performing on your store" = "스토어의 상품 실적에 대한 인사이트 확인";
 
-/* Subtitle for Browse our FAQ */
+/* Subtitle for Help Center */
 "Get answers to questions you have" = "궁금한 질문에 대한 답변 보기";
 
 /* Alerts the user that wpcom account information is being retrieved. */
@@ -327,6 +347,9 @@
 
 /* Contact Support Action */
 "Help & Support" = "도움 및 지원";
+
+/* Browse our help documentation website title */
+"Help Center" = "도움말 센터";
 
 /* My Store > Settings > Privacy settings section */
 "Help Improve The App" = "앱 개선 지원";
@@ -388,6 +411,9 @@
 /* Displayed when an Order is being retrieved */
 "Loading Order" = "주문 로드 중";
 
+/* Displayed when an Product is being retrieved */
+"Loading Product" = "제품 로드 중";
+
 /* Button title.  Tapping takes the user to the login form.
    Log In button label. */
 "Log In" = "로그인";
@@ -416,6 +442,9 @@
 
 /* Sign in instructions on the 'log in using email' screen. */
 "Log in with your WordPress.com account email address to manage your WooCommerce stores." = "WooCommerce 스토어를 관리하려면 워드프레스닷컴 계정 이메일 주소로 로그인합니다.";
+
+/* Error message that displays on the 'Log in by entering your site address.' screen. Jetpack is required for logging into the WooCommerce mobile apps. */
+"Looks like your site isn't set up to use this app. Make sure your site has Jetpack installed to continue." = "회원님의 사이트가 이 앱을 사용하도록 설정되지 않은 것 같습니다. 회원님의 사이트를 계속 이용하려면 젯팩이 설치되어 있어야 합니다.";
 
 /* Title of a button. */
 "Lost your password?" = "비밀번호 분실?";
@@ -510,6 +539,9 @@
 /* Notifications List (Empty State + Filters)
    Orders List (Empty State + Filters) */
 "No results for the selected criteria" = "선택한 기준에 맞는 결과가 없음";
+
+/* Empty state for the list of shipment providers. It reads: 'No results for DHL. Add a custom provider' */
+"No results found for (term)\nAdd a custom provider" = "No results found for (term)\nAdd a custom provider";
 
 /* Order details > tracking.  This is where the shipping date would normally display. */
 "Not shipped yet" = "아직 배송되지 않음";
@@ -649,8 +681,11 @@
 "Private note" = "비공개 메모";
 
 /* Description for Top Performers left column header
-   Product section title - Section header title for the product */
+   Product section title - Section header title for the product - Title of product detail screen. */
 "Product" = "상품";
+
+/* Notice displayed when the onscreen product was just deleted. It reads: Product {product number} has been removed from your store. */
+"Product %ld has been removed from your store" = "제품 %ld이(가) 스토어에서 제거되었습니다.";
 
 /* VoiceOver accessibility hint, informing the user that the row can be tapped to get to a prompt that lets them call or message the billing customer. */
 "Prompts with the option to call or message the billing customer." = "청구 고객에게 전화를 걸거나 메시지를 보낼 수 있는 옵션이 표시된 메시지가 나타납니다.";
@@ -709,6 +744,9 @@
 /* One Time Code has been sent via SMS */
 "SMS Sent" = "SMS 전송됨";
 
+/* Edit tracking screen - button title to save a tracking */
+"Save" = "저장";
+
 /* Orders Search Placeholder */
 "Search all orders" = "모든 주문 검색";
 
@@ -747,8 +785,14 @@
 /* Shipping label for payment view */
 "Shipping" = "배송";
 
+/* Title of view displaying all available Shipment Tracking Providers */
+"Shipping Providers" = "배송 업체";
+
 /* Shipping title for customer info cell */
 "Shipping details" = "배송 상세 내역";
+
+/* Add / Edit shipping provider. Title of cell presenting name */
+"Shipping provider" = "배송 업체";
 
 /* Footer text to show the billing cell */
 "Show billing" = "청구 표시";
@@ -930,6 +974,9 @@
 /* Settings > Privacy Settings > privacy info section. Explains what we do with the information we collect. */
 "This information helps us improve our products, make marketing to you more relevant, personalize your WordPress.com experience, and more as detailed in our privacy policy." = "이 정보는 개인정보 취급방침에 명시된 것처럼 제품을 개선하고, 보다 관련된 마케팅을 제공하며, 워드프레스닷컴 환경을 개인 설정하는 데 도움을 줍니다.";
 
+/* Message displayed when loading a specific product fails */
+"This product couldn't be loaded" = "이 제품을 로드할 수 없음";
+
 /* Text instructing the user to enter their email address. */
 "To create your new WordPress.com account, please enter your email address." = "새 워드프레스닷컴 계정을 만들려면 이메일 주소를 입력하세요.";
 
@@ -964,6 +1011,9 @@
 /* Order tracking section title */
 "Tracking" = "추적";
 
+/* Add / Edit shipping provider. Title of cell presenting tracking number */
+"Tracking number" = "추적 번호";
+
 /* Accessibility label for Shipment tracking number in Order details screen. Reads like: Tracking Number 1AZ234567890 */
 "Tracking number %@" = "추적 번호 %@";
 
@@ -991,14 +1041,23 @@
 /* Content of error presented when Add Note Action Failed. It reads: Unable to add note to order #{order number} */
 "Unable to add note to order #(viewModel.order.orderID)" = "주문 번호(viewModel.order.orderID)에 메모를 추가할 수 없음";
 
+/* Content of error presented when Add Shipment Tracking Action Failed. It reads: Unable to add tracking to order #{order number} */
+"Unable to add tracking to order #(orderID)" = "주문 번호(orderID)에 대한 추적을 추가할 수 없음";
+
 /* Content of error presented when updating the status of an Order fails. It reads: Unable to change status of order #{order number} */
 "Unable to change status of order #(orderID)" = "주문 번호(orderID)의 상태를 변경할 수 없음";
+
+/* Content of error presented when Delete Shipment Tracking Action Failed. It reads: Unable to delete tracking for order #{order number} */
+"Unable to delete tracking for order #(orderID)" = "주문 번호(orderID)에 대한 추적을 삭제할 수 없음";
 
 /* Displayed during the Login flow, whenever the user has no woo stores associated. */
 "Unable to find WooCommerce stores connected to this account" = "이 계정에 연결된 우커머스 스토어를 찾을 수 없음";
 
 /* Content of error presented when Fullfill Order Action Failed. It reads: Unable to fulfill order #{order number} */
 "Unable to fulfill order #(orderID)" = "주문 번호(orderID)를 처리할 수 없음";
+
+/* Content of error presented when loading the list of shipment providers failed. It reads: Unable to load Shipment Providers */
+"Unable to load Shipment Providers" = "배송 업체를 로드할 수 없음";
 
 /* Load Action Failed */
 "Unable to load content" = "콘텐츠를 로드할 수 없음";
@@ -1008,6 +1067,9 @@
 
 /* No comment provided by engineer. */
 "Unable to read the WordPress site at that URL. Tap 'Need Help?' to view the FAQ." = "해당 URL에서 워드프레스 사이트를 읽을 수 없습니다. '도움이 필요하세요?'를 눌러 FAQ를 보세요.";
+
+/* Notice displayed when an error occurs while refreshing a product. It reads: Unable to refresh product #{product number} */
+"Unable to refresh Product #%ld" = "제품 번호 %ld을(를) 새로 고칠 수 없음";
 
 /* Refresh Action Failed */
 "Unable to refresh list" = "목록을 새로 고칠 수 없음";
