--- a/WooCommerce/Resources/nl.lproj/Localizable.strings
+++ b/WooCommerce/Resources/nl.lproj/Localizable.strings
@@ -1,4 +1,4 @@
-/* Translation-Revision-Date: 2019-04-15 12:54:33+0000 */
+/* Translation-Revision-Date: 2019-04-30 14:54:03+0000 */
 /* Plural-Forms: nplurals=2; plural=n != 1; */
 /* Generator: GlotPress/2.4.0-alpha */
 /* Language: nl */
@@ -27,10 +27,12 @@
 /* The plugin is active on the site and has enabled automatic updates */
 "Active, Autoupdates on" = "Actief, auto-updates aan";
 
-/* Add a note screen - button title to send the note */
+/* Add a note screen - button title to send the note
+   Add tracking screen - button title to add a tracking */
 "Add" = "Voeg toe";
 
-/* Add Tracking row label */
+/* Add Tracking row label
+   Add tracking screen - title. */
 "Add Tracking" = "Tracking toevoegen";
 
 /* Button text for adding a new order note */
@@ -41,6 +43,9 @@
 
 /* VoiceOver accessibility hint, informing the user that the button can be used to add an order note. */
 "Adds a note to an order" = "Voegt een bericht toe aan een bestelling";
+
+/* VoiceOver accessibility hint, informing the user that the button can be used to add tracking to an order. Should end with a period. */
+"Adds tracking to an order." = "Voegt tracking toe aan een bestelling.";
 
 /* Cell subtitle explaining why you might want to navigate to view the application log. */
 "Advanced tool to review the app status" = "Geavanceerde tool om de app-status te controleren";
@@ -111,9 +116,6 @@
 
 /* Billing title for customer info cell */
 "Billing details" = "Factuurgegevens";
-
-/* Browse our FAQ title */
-"Browse our FAQ" = "Bekijk onze veelgestelde vragen";
 
 /* Legal disclaimer for signup buttons, the underscores _..._ denote underline */
 "By signing up, you agree to our _Terms of Service_." = "Door aan te melden, ga je akkoord met onze _algemene voorwaarden_.";
@@ -194,6 +196,9 @@
 /* Cell title: the current date. */
 "Current" = "Huidig";
 
+/* Title of button to add a custom tracking provider if filtering the list yields no results. */
+"Custom Provider" = "Aangepaste bezorgservice";
+
 /* Customer info section title
    Section title for the customer's billing and shipping address */
 "Customer Information" = "Klantgegevens";
@@ -202,11 +207,17 @@
    Section title for a note from the customer */
 "Customer Provided Note" = "Bericht van klant";
 
+/* Add / Edit shipping provider. Title of cell date shipped */
+"Date shipped" = "Datum van verzending";
+
 /* Statistical unit - a single day */
 "Day" = "Dag";
 
 /* Plural of 'day' — a statistical unit */
 "Days" = "Dagen";
+
+/* Delete Tracking button title */
+"Delete Tracking" = "Tracking verwijderen";
 
 /* The row label to tap for a detailed product list */
 "Details" = "Details";
@@ -218,7 +229,7 @@
 "Discount" = "Korting";
 
 /* Add a note screen - button title for closing the view
-   Dismiss the action sheet */
+   Dismiss the action sheet - Product details screen - button title for closing the view */
 "Dismiss" = "Afbreken";
 
 /* Label for button to log in using your site address. The underscores _..._ denote underline */
@@ -247,6 +258,15 @@
 
 /* VoiceOver accessibility hint, informing the user that double-tapping will toggle the switch off and on. */
 "Double tap to toggle setting." = "Tik tweemaal om instelling in\/uit te schakelen.";
+
+/* Accessibility hint for Pencil button in an individual Shipment Tracking in the order fulfillment screen */
+"Edit" = "Bewerken";
+
+/* Edit tracking screen - title. */
+"Edit Tracking" = "Tracking bewerken";
+
+/* Accessibility hint for Edit Shipment button in Order fulfillment screen */
+"Edits a shipment." = "Bewerkt een verzending.";
 
 /* Email address text field placeholder */
 "Email" = "E-mail";
@@ -309,7 +329,7 @@
 /* Description for Top Performers section of My Store tab. */
 "Gain insights into how products are performing on your store" = "Krijg inzicht in hoe goed producten op je site presteren";
 
-/* Subtitle for Browse our FAQ */
+/* Subtitle for Help Center */
 "Get answers to questions you have" = "Krijg antwoord op de vragen die je hebt";
 
 /* Alerts the user that wpcom account information is being retrieved. */
@@ -327,6 +347,9 @@
 
 /* Contact Support Action */
 "Help & Support" = "Help & ondersteuning";
+
+/* Browse our help documentation website title */
+"Help Center" = "Help Center";
 
 /* My Store > Settings > Privacy settings section */
 "Help Improve The App" = "Help bij het verbeteren van de app";
@@ -388,6 +411,9 @@
 /* Displayed when an Order is being retrieved */
 "Loading Order" = "Bestelling wordt geladen";
 
+/* Displayed when an Product is being retrieved */
+"Loading Product" = "Product wordt geladen";
+
 /* Button title.  Tapping takes the user to the login form.
    Log In button label. */
 "Log In" = "Inloggen";
@@ -416,6 +442,9 @@
 
 /* Sign in instructions on the 'log in using email' screen. */
 "Log in with your WordPress.com account email address to manage your WooCommerce stores." = "Log in met het e-mailadres van je WordPress.com-account om je WooCommerce-winkels te beheren.";
+
+/* Error message that displays on the 'Log in by entering your site address.' screen. Jetpack is required for logging into the WooCommerce mobile apps. */
+"Looks like your site isn't set up to use this app. Make sure your site has Jetpack installed to continue." = "Je site lijkt niet ingesteld te zijn voor het gebruik van deze app. Zorg dat Jetpack op je site is geïnstalleerd om door te gaan.";
 
 /* Title of a button. */
 "Lost your password?" = "Wachtwoord vergeten?";
@@ -510,6 +539,9 @@
 /* Notifications List (Empty State + Filters)
    Orders List (Empty State + Filters) */
 "No results for the selected criteria" = "Geen resultaten voor de geselecteerde criteria";
+
+/* Empty state for the list of shipment providers. It reads: 'No results for DHL. Add a custom provider' */
+"No results found for (term)\nAdd a custom provider" = "No results found for (term)\nAdd a custom provider";
 
 /* Order details > tracking.  This is where the shipping date would normally display. */
 "Not shipped yet" = "Nog niet verzonden";
@@ -649,8 +681,11 @@
 "Private note" = "Privébericht";
 
 /* Description for Top Performers left column header
-   Product section title - Section header title for the product */
+   Product section title - Section header title for the product - Title of product detail screen. */
 "Product" = "Product";
+
+/* Notice displayed when the onscreen product was just deleted. It reads: Product {product number} has been removed from your store. */
+"Product %ld has been removed from your store" = "Product %ld is uit je winkel verwijderd";
 
 /* VoiceOver accessibility hint, informing the user that the row can be tapped to get to a prompt that lets them call or message the billing customer. */
 "Prompts with the option to call or message the billing customer." = "Dialoogvenster met de optie om de gefactureerde klant te bellen of een bericht te sturen.";
@@ -709,6 +744,9 @@
 /* One Time Code has been sent via SMS */
 "SMS Sent" = "Sms verzonden";
 
+/* Edit tracking screen - button title to save a tracking */
+"Save" = "Opslaan";
+
 /* Orders Search Placeholder */
 "Search all orders" = "Alle bestellingen doorzoeken";
 
@@ -747,8 +785,14 @@
 /* Shipping label for payment view */
 "Shipping" = "Verzending";
 
+/* Title of view displaying all available Shipment Tracking Providers */
+"Shipping Providers" = "Bezorgservices";
+
 /* Shipping title for customer info cell */
 "Shipping details" = "Verzendgegevens";
+
+/* Add / Edit shipping provider. Title of cell presenting name */
+"Shipping provider" = "Bezorgservice";
 
 /* Footer text to show the billing cell */
 "Show billing" = "Facturen tonen";
@@ -930,6 +974,9 @@
 /* Settings > Privacy Settings > privacy info section. Explains what we do with the information we collect. */
 "This information helps us improve our products, make marketing to you more relevant, personalize your WordPress.com experience, and more as detailed in our privacy policy." = "Deze informatie helpt ons onze producten te verbeteren, marketing relevanter te maken en de WordPress.com-ervaring op je af te stemmen. Je vindt hierover meer informatie in ons privacybeleid.";
 
+/* Message displayed when loading a specific product fails */
+"This product couldn't be loaded" = "Dit product kon niet worden geladen";
+
 /* Text instructing the user to enter their email address. */
 "To create your new WordPress.com account, please enter your email address." = "Om een nieuw WordPress.com account te maken, vul jouw e-mailadres in.";
 
@@ -964,6 +1011,9 @@
 /* Order tracking section title */
 "Tracking" = "Volgen";
 
+/* Add / Edit shipping provider. Title of cell presenting tracking number */
+"Tracking number" = "Volgnummer";
+
 /* Accessibility label for Shipment tracking number in Order details screen. Reads like: Tracking Number 1AZ234567890 */
 "Tracking number %@" = "Volgnummer %@";
 
@@ -991,14 +1041,23 @@
 /* Content of error presented when Add Note Action Failed. It reads: Unable to add note to order #{order number} */
 "Unable to add note to order #(viewModel.order.orderID)" = "Kan geen notitie toevoegen aan bestelnr. (viewModel.order.orderID)";
 
+/* Content of error presented when Add Shipment Tracking Action Failed. It reads: Unable to add tracking to order #{order number} */
+"Unable to add tracking to order #(orderID)" = "Kan tracking voor bestelnr. (orderID) niet toevoegen";
+
 /* Content of error presented when updating the status of an Order fails. It reads: Unable to change status of order #{order number} */
 "Unable to change status of order #(orderID)" = "Kan status van bestelnr. (orderID) niet wijzigen";
+
+/* Content of error presented when Delete Shipment Tracking Action Failed. It reads: Unable to delete tracking for order #{order number} */
+"Unable to delete tracking for order #(orderID)" = "Kan tracking voor bestelnr. (orderID) niet verwijderen";
 
 /* Displayed during the Login flow, whenever the user has no woo stores associated. */
 "Unable to find WooCommerce stores connected to this account" = "Kan geen WooCommerce-winkels vinden die aan dit account zijn gekoppeld";
 
 /* Content of error presented when Fullfill Order Action Failed. It reads: Unable to fulfill order #{order number} */
 "Unable to fulfill order #(orderID)" = "Kan bestelnr. (orderID) niet voltooien";
+
+/* Content of error presented when loading the list of shipment providers failed. It reads: Unable to load Shipment Providers */
+"Unable to load Shipment Providers" = "Kan verzendingsaanbieders niet laden";
 
 /* Load Action Failed */
 "Unable to load content" = "Kan content niet laden";
@@ -1008,6 +1067,9 @@
 
 /* No comment provided by engineer. */
 "Unable to read the WordPress site at that URL. Tap 'Need Help?' to view the FAQ." = "Kon geen WordPress-site lezen op deze URL. Tik op 'Hulp nodig?' om de veelgestelde vragen te bekijken.";
+
+/* Notice displayed when an error occurs while refreshing a product. It reads: Unable to refresh product #{product number} */
+"Unable to refresh Product #%ld" = "Kan productnr. %ld niet vernieuwen";
 
 /* Refresh Action Failed */
 "Unable to refresh list" = "Kan lijst niet vernieuwen";
