--- a/WooCommerce/Resources/sv.lproj/Localizable.strings
+++ b/WooCommerce/Resources/sv.lproj/Localizable.strings
@@ -1,4 +1,4 @@
-/* Translation-Revision-Date: 2019-04-16 09:54:03+0000 */
+/* Translation-Revision-Date: 2019-04-30 12:54:03+0000 */
 /* Plural-Forms: nplurals=2; plural=n != 1; */
 /* Generator: GlotPress/2.4.0-alpha */
 /* Language: sv_SE */
@@ -27,10 +27,12 @@
 /* The plugin is active on the site and has enabled automatic updates */
 "Active, Autoupdates on" = "Aktiv, automatiska uppdateringar på";
 
-/* Add a note screen - button title to send the note */
+/* Add a note screen - button title to send the note
+   Add tracking screen - button title to add a tracking */
 "Add" = "Lägg till";
 
-/* Add Tracking row label */
+/* Add Tracking row label
+   Add tracking screen - title. */
 "Add Tracking" = "Lägg till spårning";
 
 /* Button text for adding a new order note */
@@ -41,6 +43,9 @@
 
 /* VoiceOver accessibility hint, informing the user that the button can be used to add an order note. */
 "Adds a note to an order" = "Lägger till en notering för en order";
+
+/* VoiceOver accessibility hint, informing the user that the button can be used to add tracking to an order. Should end with a period. */
+"Adds tracking to an order." = "Lägger till spårning för en order.";
 
 /* Cell subtitle explaining why you might want to navigate to view the application log. */
 "Advanced tool to review the app status" = "Avancerat verktyg för att granska appens status";
@@ -111,9 +116,6 @@
 
 /* Billing title for customer info cell */
 "Billing details" = "Faktureringsadress";
-
-/* Browse our FAQ title */
-"Browse our FAQ" = "Bläddra bland vanliga frågor";
 
 /* Legal disclaimer for signup buttons, the underscores _..._ denote underline */
 "By signing up, you agree to our _Terms of Service_." = "Genom att registrera dig godkänner du våra _användarvillkor_.";
@@ -194,6 +196,9 @@
 /* Cell title: the current date. */
 "Current" = "Nuvarande";
 
+/* Title of button to add a custom tracking provider if filtering the list yields no results. */
+"Custom Provider" = "Anpassad leverantör";
+
 /* Customer info section title
    Section title for the customer's billing and shipping address */
 "Customer Information" = "Kundinformation";
@@ -202,11 +207,17 @@
    Section title for a note from the customer */
 "Customer Provided Note" = "Kundnotering";
 
+/* Add / Edit shipping provider. Title of cell date shipped */
+"Date shipped" = "Datum skickat";
+
 /* Statistical unit - a single day */
 "Day" = "Dag";
 
 /* Plural of 'day' — a statistical unit */
 "Days" = "Dagar";
+
+/* Delete Tracking button title */
+"Delete Tracking" = "Ta bort spårning";
 
 /* The row label to tap for a detailed product list */
 "Details" = "Detaljer";
@@ -218,7 +229,7 @@
 "Discount" = "Rabatt";
 
 /* Add a note screen - button title for closing the view
-   Dismiss the action sheet */
+   Dismiss the action sheet - Product details screen - button title for closing the view */
 "Dismiss" = "Stäng";
 
 /* Label for button to log in using your site address. The underscores _..._ denote underline */
@@ -247,6 +258,15 @@
 
 /* VoiceOver accessibility hint, informing the user that double-tapping will toggle the switch off and on. */
 "Double tap to toggle setting." = "Dubbelpeka för att växla inställning.";
+
+/* Accessibility hint for Pencil button in an individual Shipment Tracking in the order fulfillment screen */
+"Edit" = "Redigera";
+
+/* Edit tracking screen - title. */
+"Edit Tracking" = "Redigera spårning";
+
+/* Accessibility hint for Edit Shipment button in Order fulfillment screen */
+"Edits a shipment." = "Redigerar en försändelse.";
 
 /* Email address text field placeholder */
 "Email" = "E-post";
@@ -309,7 +329,7 @@
 /* Description for Top Performers section of My Store tab. */
 "Gain insights into how products are performing on your store" = "Få insikt i hur produkter presterar i din butik";
 
-/* Subtitle for Browse our FAQ */
+/* Subtitle for Help Center */
 "Get answers to questions you have" = "Få svar på frågor som du har";
 
 /* Alerts the user that wpcom account information is being retrieved. */
@@ -327,6 +347,9 @@
 
 /* Contact Support Action */
 "Help & Support" = "Hjälp och support";
+
+/* Browse our help documentation website title */
+"Help Center" = "Hjälpcenter";
 
 /* My Store > Settings > Privacy settings section */
 "Help Improve The App" = "Hjälp till att förbättra appen";
@@ -388,6 +411,9 @@
 /* Displayed when an Order is being retrieved */
 "Loading Order" = "Hämtar beställning";
 
+/* Displayed when an Product is being retrieved */
+"Loading Product" = "Läser in produkt";
+
 /* Button title.  Tapping takes the user to the login form.
    Log In button label. */
 "Log In" = "Logga in";
@@ -416,6 +442,9 @@
 
 /* Sign in instructions on the 'log in using email' screen. */
 "Log in with your WordPress.com account email address to manage your WooCommerce stores." = "Logga in med e-postadressen för ditt WordPress.com-konto för att hantera dina WooCommerce-butiker.";
+
+/* Error message that displays on the 'Log in by entering your site address.' screen. Jetpack is required for logging into the WooCommerce mobile apps. */
+"Looks like your site isn't set up to use this app. Make sure your site has Jetpack installed to continue." = "Det verkar som om din webbplats inte är inställd för att använda den här appen. Se till att din webbplats har Jetpack installerat för att fortsätta.";
 
 /* Title of a button. */
 "Lost your password?" = "Glömt ditt lösenord?";
@@ -510,6 +539,9 @@
 /* Notifications List (Empty State + Filters)
    Orders List (Empty State + Filters) */
 "No results for the selected criteria" = "Inga resultat för de valda kriterierna";
+
+/* Empty state for the list of shipment providers. It reads: 'No results for DHL. Add a custom provider' */
+"No results found for (term)\nAdd a custom provider" = "No results found for (term)\nAdd a custom provider";
 
 /* Order details > tracking.  This is where the shipping date would normally display. */
 "Not shipped yet" = "Inte skickad ännu";
@@ -649,8 +681,11 @@
 "Private note" = "Privat notering";
 
 /* Description for Top Performers left column header
-   Product section title - Section header title for the product */
+   Product section title - Section header title for the product - Title of product detail screen. */
 "Product" = "Produkt";
+
+/* Notice displayed when the onscreen product was just deleted. It reads: Product {product number} has been removed from your store. */
+"Product %ld has been removed from your store" = "Produkt %ld har tagits bort från din butik";
 
 /* VoiceOver accessibility hint, informing the user that the row can be tapped to get to a prompt that lets them call or message the billing customer. */
 "Prompts with the option to call or message the billing customer." = "Anvisningar med alternativet att ringa eller skicka meddelande till faktureringskunden.";
@@ -709,6 +744,9 @@
 /* One Time Code has been sent via SMS */
 "SMS Sent" = "SMS skickat";
 
+/* Edit tracking screen - button title to save a tracking */
+"Save" = "Spara";
+
 /* Orders Search Placeholder */
 "Search all orders" = "Sök alla ordrar";
 
@@ -747,8 +785,14 @@
 /* Shipping label for payment view */
 "Shipping" = "Frakt";
 
+/* Title of view displaying all available Shipment Tracking Providers */
+"Shipping Providers" = "Transportleverantörer";
+
 /* Shipping title for customer info cell */
 "Shipping details" = "Leveransadress";
+
+/* Add / Edit shipping provider. Title of cell presenting name */
+"Shipping provider" = "Transportleverantör";
 
 /* Footer text to show the billing cell */
 "Show billing" = "Visa fakturering";
@@ -930,6 +974,9 @@
 /* Settings > Privacy Settings > privacy info section. Explains what we do with the information we collect. */
 "This information helps us improve our products, make marketing to you more relevant, personalize your WordPress.com experience, and more as detailed in our privacy policy." = "Denna information hjälper oss att förbättra våra produkter, se till att marknadsföringen till dig är mer relevant, anpassa din upplevelse av WordPress.com och annat som finns beskrivet i vår integritetspolicy.";
 
+/* Message displayed when loading a specific product fails */
+"This product couldn't be loaded" = "Det gick inte att hämta produkten";
+
 /* Text instructing the user to enter their email address. */
 "To create your new WordPress.com account, please enter your email address." = "Fyll i din e-postadress för att skapa ditt nya WordPress.com-konto.";
 
@@ -964,6 +1011,9 @@
 /* Order tracking section title */
 "Tracking" = "Spårning";
 
+/* Add / Edit shipping provider. Title of cell presenting tracking number */
+"Tracking number" = "Spårningsnummer";
+
 /* Accessibility label for Shipment tracking number in Order details screen. Reads like: Tracking Number 1AZ234567890 */
 "Tracking number %@" = "Spårningsnummer %@";
 
@@ -991,14 +1041,23 @@
 /* Content of error presented when Add Note Action Failed. It reads: Unable to add note to order #{order number} */
 "Unable to add note to order #(viewModel.order.orderID)" = "Det gick inte att lägga till en anteckning till ordernummer (viewModel.order.orderID)";
 
+/* Content of error presented when Add Shipment Tracking Action Failed. It reads: Unable to add tracking to order #{order number} */
+"Unable to add tracking to order #(orderID)" = "Det går inte att lägga till spårning till ordernumret (orderID)";
+
 /* Content of error presented when updating the status of an Order fails. It reads: Unable to change status of order #{order number} */
 "Unable to change status of order #(orderID)" = "Det gick inte att ändra status på ordernummer (orderID)";
+
+/* Content of error presented when Delete Shipment Tracking Action Failed. It reads: Unable to delete tracking for order #{order number} */
+"Unable to delete tracking for order #(orderID)" = "Det går inte att radera spårning för ordernumret (orderID)";
 
 /* Displayed during the Login flow, whenever the user has no woo stores associated. */
 "Unable to find WooCommerce stores connected to this account" = "Kunde inte hitta WooCommerce-butiker anslutna till det här kontot";
 
 /* Content of error presented when Fullfill Order Action Failed. It reads: Unable to fulfill order #{order number} */
 "Unable to fulfill order #(orderID)" = "Det gick inte att uppfylla ordernummer (orderID)";
+
+/* Content of error presented when loading the list of shipment providers failed. It reads: Unable to load Shipment Providers */
+"Unable to load Shipment Providers" = "Det gick inte att läsa in transportleverantörer";
 
 /* Load Action Failed */
 "Unable to load content" = "Det gick inte att ladda innehållet";
@@ -1008,6 +1067,9 @@
 
 /* No comment provided by engineer. */
 "Unable to read the WordPress site at that URL. Tap 'Need Help?' to view the FAQ." = "Kunde inte läsa WordPress-webbplatsen på denna URL. Ttryck på \"Behöver du hjälp?\" för att se FAQ.";
+
+/* Notice displayed when an error occurs while refreshing a product. It reads: Unable to refresh product #{product number} */
+"Unable to refresh Product #%ld" = "Kunde inte uppdatera Produktnr %ld";
 
 /* Refresh Action Failed */
 "Unable to refresh list" = "Kunde inte uppdatera listan";
