--- a/WooCommerce/Resources/tr.lproj/Localizable.strings
+++ b/WooCommerce/Resources/tr.lproj/Localizable.strings
@@ -1,4 +1,4 @@
-/* Translation-Revision-Date: 2019-04-16 13:54:03+0000 */
+/* Translation-Revision-Date: 2019-05-02 15:54:03+0000 */
 /* Plural-Forms: nplurals=2; plural=(n > 1); */
 /* Generator: GlotPress/2.4.0-alpha */
 /* Language: tr */
@@ -27,10 +27,12 @@
 /* The plugin is active on the site and has enabled automatic updates */
 "Active, Autoupdates on" = "Etkin, otomatik güncellemeler açık";
 
-/* Add a note screen - button title to send the note */
+/* Add a note screen - button title to send the note
+   Add tracking screen - button title to add a tracking */
 "Add" = "Ekle";
 
-/* Add Tracking row label */
+/* Add Tracking row label
+   Add tracking screen - title. */
 "Add Tracking" = "Takip Ekle";
 
 /* Button text for adding a new order note */
@@ -41,6 +43,9 @@
 
 /* VoiceOver accessibility hint, informing the user that the button can be used to add an order note. */
 "Adds a note to an order" = "Siparişe not ekler";
+
+/* VoiceOver accessibility hint, informing the user that the button can be used to add tracking to an order. Should end with a period. */
+"Adds tracking to an order." = "Bir siparişe takip ekler.";
 
 /* Cell subtitle explaining why you might want to navigate to view the application log. */
 "Advanced tool to review the app status" = "Uygulama durumunu incelemek için gelişmiş araç";
@@ -111,9 +116,6 @@
 
 /* Billing title for customer info cell */
 "Billing details" = "Fatura Ayrıntıları";
-
-/* Browse our FAQ title */
-"Browse our FAQ" = "SSS sayfamıza göz atın";
 
 /* Legal disclaimer for signup buttons, the underscores _..._ denote underline */
 "By signing up, you agree to our _Terms of Service_." = "Kaydolarak_Hizmet Koşullarını_ kabul etmiş olursunuz.";
@@ -194,6 +196,9 @@
 /* Cell title: the current date. */
 "Current" = "Geçerli";
 
+/* Title of button to add a custom tracking provider if filtering the list yields no results. */
+"Custom Provider" = "Özel Sağlayıcı";
+
 /* Customer info section title
    Section title for the customer's billing and shipping address */
 "Customer Information" = "Müşteri Bilgileri";
@@ -202,11 +207,17 @@
    Section title for a note from the customer */
 "Customer Provided Note" = "Müşterinin Verdiği Not";
 
+/* Add / Edit shipping provider. Title of cell date shipped */
+"Date shipped" = "Gönderim tarihi";
+
 /* Statistical unit - a single day */
 "Day" = "Gün";
 
 /* Plural of 'day' — a statistical unit */
 "Days" = "Günler";
+
+/* Delete Tracking button title */
+"Delete Tracking" = "Takibi Sil";
 
 /* The row label to tap for a detailed product list */
 "Details" = "Detaylar";
@@ -218,7 +229,7 @@
 "Discount" = "İndirim";
 
 /* Add a note screen - button title for closing the view
-   Dismiss the action sheet */
+   Dismiss the action sheet - Product details screen - button title for closing the view */
 "Dismiss" = "Kapat";
 
 /* Label for button to log in using your site address. The underscores _..._ denote underline */
@@ -247,6 +258,15 @@
 
 /* VoiceOver accessibility hint, informing the user that double-tapping will toggle the switch off and on. */
 "Double tap to toggle setting." = "Ayarı değiştirmek için çift tıklayın.";
+
+/* Accessibility hint for Pencil button in an individual Shipment Tracking in the order fulfillment screen */
+"Edit" = "Düzenle";
+
+/* Edit tracking screen - title. */
+"Edit Tracking" = "Takibi Düzenle";
+
+/* Accessibility hint for Edit Shipment button in Order fulfillment screen */
+"Edits a shipment." = "Bir gönderiyi düzenler.";
 
 /* Email address text field placeholder */
 "Email" = "E-posta";
@@ -309,7 +329,7 @@
 /* Description for Top Performers section of My Store tab. */
 "Gain insights into how products are performing on your store" = "Ürünlerin mağazanızdaki performansına dair içgörüler edinin";
 
-/* Subtitle for Browse our FAQ */
+/* Subtitle for Help Center */
 "Get answers to questions you have" = "Sorularınıza yanıt alın";
 
 /* Alerts the user that wpcom account information is being retrieved. */
@@ -327,6 +347,9 @@
 
 /* Contact Support Action */
 "Help & Support" = "Yardım ve Destek";
+
+/* Browse our help documentation website title */
+"Help Center" = "Yardım Merkezi";
 
 /* My Store > Settings > Privacy settings section */
 "Help Improve The App" = "Uygulamayı İyileştirmemize Yardımcı Olun";
@@ -388,6 +411,9 @@
 /* Displayed when an Order is being retrieved */
 "Loading Order" = "Sipariş Yükleniyor";
 
+/* Displayed when an Product is being retrieved */
+"Loading Product" = "Ürün yükleniyor";
+
 /* Button title.  Tapping takes the user to the login form.
    Log In button label. */
 "Log In" = "Giriş yap";
@@ -416,6 +442,9 @@
 
 /* Sign in instructions on the 'log in using email' screen. */
 "Log in with your WordPress.com account email address to manage your WooCommerce stores." = "WooCommerce mağazalarınızı yönetmek için WordPress.com hesabınızın e-posta adresi ile oturum açın.";
+
+/* Error message that displays on the 'Log in by entering your site address.' screen. Jetpack is required for logging into the WooCommerce mobile apps. */
+"Looks like your site isn't set up to use this app. Make sure your site has Jetpack installed to continue." = "Sitenizin bu uygulamayı kullanacak şekilde oluşturulmadığı anlaşılıyor. Devam etmek için sitenizde Jetpack'in yüklü olduğundan emin olun.";
 
 /* Title of a button. */
 "Lost your password?" = "Parolanızı mı unuttunuz?";
@@ -510,6 +539,9 @@
 /* Notifications List (Empty State + Filters)
    Orders List (Empty State + Filters) */
 "No results for the selected criteria" = "Seçilen kriter için sonuç yok";
+
+/* Empty state for the list of shipment providers. It reads: 'No results for DHL. Add a custom provider' */
+"No results found for (term)\nAdd a custom provider" = "No results found for (term)\nAdd a custom provider";
 
 /* Order details > tracking.  This is where the shipping date would normally display. */
 "Not shipped yet" = "Henüz sevk edilmedi";
@@ -649,8 +681,11 @@
 "Private note" = "Özel not";
 
 /* Description for Top Performers left column header
-   Product section title - Section header title for the product */
+   Product section title - Section header title for the product - Title of product detail screen. */
 "Product" = "Ürün";
+
+/* Notice displayed when the onscreen product was just deleted. It reads: Product {product number} has been removed from your store. */
+"Product %ld has been removed from your store" = "%ld ürünü mağazanızdan kaldırıldı";
 
 /* VoiceOver accessibility hint, informing the user that the row can be tapped to get to a prompt that lets them call or message the billing customer. */
 "Prompts with the option to call or message the billing customer." = "Müşteriyi arama veya müşteriye mesaj gönderme seçenekli istemler.";
@@ -709,6 +744,9 @@
 /* One Time Code has been sent via SMS */
 "SMS Sent" = "SMS Gönderildi";
 
+/* Edit tracking screen - button title to save a tracking */
+"Save" = "Kaydet";
+
 /* Orders Search Placeholder */
 "Search all orders" = "Tüm siparişleri ara";
 
@@ -747,8 +785,14 @@
 /* Shipping label for payment view */
 "Shipping" = "Gönderim";
 
+/* Title of view displaying all available Shipment Tracking Providers */
+"Shipping Providers" = "Gönderim Sağlayıcıları";
+
 /* Shipping title for customer info cell */
 "Shipping details" = "Gönderim ayrıntıları";
+
+/* Add / Edit shipping provider. Title of cell presenting name */
+"Shipping provider" = "Gönderim sağlayıcısı";
 
 /* Footer text to show the billing cell */
 "Show billing" = "Faturayı gösterin";
@@ -930,6 +974,9 @@
 /* Settings > Privacy Settings > privacy info section. Explains what we do with the information we collect. */
 "This information helps us improve our products, make marketing to you more relevant, personalize your WordPress.com experience, and more as detailed in our privacy policy." = "Bu bilgiler, ürünlerimizi geliştirmemize, pazarlamayı sizin için daha alakalı hale getirmemize, WordPress.com deneyiminizi kişiselleştirmemize ve ayrıntılı olarak gizlilik politikamızda belirttiğimiz şekilde daha fazlasına yardımcı olur.";
 
+/* Message displayed when loading a specific product fails */
+"This product couldn't be loaded" = "Bu ürün yüklenemedi";
+
 /* Text instructing the user to enter their email address. */
 "To create your new WordPress.com account, please enter your email address." = "Yeni WordPress.com hesabınızı oluşturmak için lütfen e-posta adresinizi girin.";
 
@@ -964,6 +1011,9 @@
 /* Order tracking section title */
 "Tracking" = "İzleme";
 
+/* Add / Edit shipping provider. Title of cell presenting tracking number */
+"Tracking number" = "İzleme numarası";
+
 /* Accessibility label for Shipment tracking number in Order details screen. Reads like: Tracking Number 1AZ234567890 */
 "Tracking number %@" = "Takip numarası: %@";
 
@@ -991,14 +1041,23 @@
 /* Content of error presented when Add Note Action Failed. It reads: Unable to add note to order #{order number} */
 "Unable to add note to order #(viewModel.order.orderID)" = "#(viewModel.order.orderID) numaralı siparişe not eklenemiyor";
 
+/* Content of error presented when Add Shipment Tracking Action Failed. It reads: Unable to add tracking to order #{order number} */
+"Unable to add tracking to order #(orderID)" = "#(orderID) siparişi için takip eklenemiyor";
+
 /* Content of error presented when updating the status of an Order fails. It reads: Unable to change status of order #{order number} */
 "Unable to change status of order #(orderID)" = "#(orderID) numaralı siparişin durumu değiştirilemiyor.";
+
+/* Content of error presented when Delete Shipment Tracking Action Failed. It reads: Unable to delete tracking for order #{order number} */
+"Unable to delete tracking for order #(orderID)" = "#(orderID) siparişi için takip silinemiyor";
 
 /* Displayed during the Login flow, whenever the user has no woo stores associated. */
 "Unable to find WooCommerce stores connected to this account" = "Bu hesaba bağlı WooCommerce mağazası bulunamadı";
 
 /* Content of error presented when Fullfill Order Action Failed. It reads: Unable to fulfill order #{order number} */
 "Unable to fulfill order #(orderID)" = "#(orderID) numaralı sipariş yerine getirilemiyor";
+
+/* Content of error presented when loading the list of shipment providers failed. It reads: Unable to load Shipment Providers */
+"Unable to load Shipment Providers" = "Gönderim Sağlayıcıları yüklenemiyor";
 
 /* Load Action Failed */
 "Unable to load content" = "İçerik yüklenemiyor";
@@ -1008,6 +1067,9 @@
 
 /* No comment provided by engineer. */
 "Unable to read the WordPress site at that URL. Tap 'Need Help?' to view the FAQ." = "Belirtilen adresteki WordPress sitesi okunamadı. 'Yardım lazım mı?' tuşuna tıklayarak SSS'i görüntüleyebilirsiniz.";
+
+/* Notice displayed when an error occurs while refreshing a product. It reads: Unable to refresh product #{product number} */
+"Unable to refresh Product #%ld" = "# numaralı ürün yenilenemiyor";
 
 /* Refresh Action Failed */
 "Unable to refresh list" = "Liste yenilenemedi";
