--- a/WooCommerce/Resources/zh-Hans.lproj/Localizable.strings
+++ b/WooCommerce/Resources/zh-Hans.lproj/Localizable.strings
@@ -1,4 +1,4 @@
-/* Translation-Revision-Date: 2019-04-16 08:54:03+0000 */
+/* Translation-Revision-Date: 2019-04-30 10:54:24+0000 */
 /* Plural-Forms: nplurals=1; plural=0; */
 /* Generator: GlotPress/2.4.0-alpha */
 /* Language: zh_CN */
@@ -27,10 +27,12 @@
 /* The plugin is active on the site and has enabled automatic updates */
 "Active, Autoupdates on" = "有效，自动更新已启用";
 
-/* Add a note screen - button title to send the note */
+/* Add a note screen - button title to send the note
+   Add tracking screen - button title to add a tracking */
 "Add" = "添加";
 
-/* Add Tracking row label */
+/* Add Tracking row label
+   Add tracking screen - title. */
 "Add Tracking" = "添加跟踪";
 
 /* Button text for adding a new order note */
@@ -41,6 +43,9 @@
 
 /* VoiceOver accessibility hint, informing the user that the button can be used to add an order note. */
 "Adds a note to an order" = "为订单添加备注";
+
+/* VoiceOver accessibility hint, informing the user that the button can be used to add tracking to an order. Should end with a period. */
+"Adds tracking to an order." = "为订单添加跟踪信息。";
 
 /* Cell subtitle explaining why you might want to navigate to view the application log. */
 "Advanced tool to review the app status" = "用于查看应用程序状态的高级工具";
@@ -111,9 +116,6 @@
 
 /* Billing title for customer info cell */
 "Billing details" = "账单详情";
-
-/* Browse our FAQ title */
-"Browse our FAQ" = "浏览我们的常见问题解答";
 
 /* Legal disclaimer for signup buttons, the underscores _..._ denote underline */
 "By signing up, you agree to our _Terms of Service_." = "注册即表示您同意我们的_服务条款_。";
@@ -194,6 +196,9 @@
 /* Cell title: the current date. */
 "Current" = "当前";
 
+/* Title of button to add a custom tracking provider if filtering the list yields no results. */
+"Custom Provider" = "自定义提供商";
+
 /* Customer info section title
    Section title for the customer's billing and shipping address */
 "Customer Information" = "客户信息";
@@ -202,11 +207,17 @@
    Section title for a note from the customer */
 "Customer Provided Note" = "客户提供的备注";
 
+/* Add / Edit shipping provider. Title of cell date shipped */
+"Date shipped" = "配送日期";
+
 /* Statistical unit - a single day */
 "Day" = "日";
 
 /* Plural of 'day' — a statistical unit */
 "Days" = "日";
+
+/* Delete Tracking button title */
+"Delete Tracking" = "删除跟踪信息";
 
 /* The row label to tap for a detailed product list */
 "Details" = "详情";
@@ -218,7 +229,7 @@
 "Discount" = "折扣";
 
 /* Add a note screen - button title for closing the view
-   Dismiss the action sheet */
+   Dismiss the action sheet - Product details screen - button title for closing the view */
 "Dismiss" = "关闭";
 
 /* Label for button to log in using your site address. The underscores _..._ denote underline */
@@ -247,6 +258,15 @@
 
 /* VoiceOver accessibility hint, informing the user that double-tapping will toggle the switch off and on. */
 "Double tap to toggle setting." = "双击切换设置。";
+
+/* Accessibility hint for Pencil button in an individual Shipment Tracking in the order fulfillment screen */
+"Edit" = "编辑";
+
+/* Edit tracking screen - title. */
+"Edit Tracking" = "编辑跟踪信息";
+
+/* Accessibility hint for Edit Shipment button in Order fulfillment screen */
+"Edits a shipment." = "编辑配送信息。";
 
 /* Email address text field placeholder */
 "Email" = "E-mail";
@@ -309,7 +329,7 @@
 /* Description for Top Performers section of My Store tab. */
 "Gain insights into how products are performing on your store" = "深入了解商店中产品的销售情况";
 
-/* Subtitle for Browse our FAQ */
+/* Subtitle for Help Center */
 "Get answers to questions you have" = "答疑解惑";
 
 /* Alerts the user that wpcom account information is being retrieved. */
@@ -327,6 +347,9 @@
 
 /* Contact Support Action */
 "Help & Support" = "帮助与支持";
+
+/* Browse our help documentation website title */
+"Help Center" = "帮助中心";
 
 /* My Store > Settings > Privacy settings section */
 "Help Improve The App" = "帮助改进应用程序";
@@ -388,6 +411,9 @@
 /* Displayed when an Order is being retrieved */
 "Loading Order" = "正在加载命令";
 
+/* Displayed when an Product is being retrieved */
+"Loading Product" = "正在加载产品";
+
 /* Button title.  Tapping takes the user to the login form.
    Log In button label. */
 "Log In" = "登录";
@@ -416,6 +442,9 @@
 
 /* Sign in instructions on the 'log in using email' screen. */
 "Log in with your WordPress.com account email address to manage your WooCommerce stores." = "使用您的 WordPress.com 帐户电子邮件地址登录，管理您的 WooCommerce 商店。";
+
+/* Error message that displays on the 'Log in by entering your site address.' screen. Jetpack is required for logging into the WooCommerce mobile apps. */
+"Looks like your site isn't set up to use this app. Make sure your site has Jetpack installed to continue." = "您的站点似乎未设置使用此应用程序。请确保您的站点已安装 Jetpack，以继续操作。";
 
 /* Title of a button. */
 "Lost your password?" = "忘记密码？";
@@ -510,6 +539,9 @@
 /* Notifications List (Empty State + Filters)
    Orders List (Empty State + Filters) */
 "No results for the selected criteria" = "没有符合所选条件的结果";
+
+/* Empty state for the list of shipment providers. It reads: 'No results for DHL. Add a custom provider' */
+"No results found for (term)\nAdd a custom provider" = "No results found for (term)\nAdd a custom provider";
 
 /* Order details > tracking.  This is where the shipping date would normally display. */
 "Not shipped yet" = "尚未配送";
@@ -649,8 +681,11 @@
 "Private note" = "私人备注";
 
 /* Description for Top Performers left column header
-   Product section title - Section header title for the product */
+   Product section title - Section header title for the product - Title of product detail screen. */
 "Product" = "产品";
+
+/* Notice displayed when the onscreen product was just deleted. It reads: Product {product number} has been removed from your store. */
+"Product %ld has been removed from your store" = "产品 %ld 已从您的商店中删除";
 
 /* VoiceOver accessibility hint, informing the user that the row can be tapped to get to a prompt that lets them call or message the billing customer. */
 "Prompts with the option to call or message the billing customer." = "可选择给账单付款客户打电话还是发邮件的提示。";
@@ -709,6 +744,9 @@
 /* One Time Code has been sent via SMS */
 "SMS Sent" = "短信已发送";
 
+/* Edit tracking screen - button title to save a tracking */
+"Save" = "保存";
+
 /* Orders Search Placeholder */
 "Search all orders" = "搜索所有订单";
 
@@ -747,8 +785,14 @@
 /* Shipping label for payment view */
 "Shipping" = "配送";
 
+/* Title of view displaying all available Shipment Tracking Providers */
+"Shipping Providers" = "配送服务提供商";
+
 /* Shipping title for customer info cell */
 "Shipping details" = "配送详情";
+
+/* Add / Edit shipping provider. Title of cell presenting name */
+"Shipping provider" = "配送服务提供商";
 
 /* Footer text to show the billing cell */
 "Show billing" = "显示账单";
@@ -930,6 +974,9 @@
 /* Settings > Privacy Settings > privacy info section. Explains what we do with the information we collect. */
 "This information helps us improve our products, make marketing to you more relevant, personalize your WordPress.com experience, and more as detailed in our privacy policy." = "该信息有助于我们改善产品、开展与您更加相关的营销活动、个性化您的 WordPress.com 体验等，请参阅隐私政策以了解详情。";
 
+/* Message displayed when loading a specific product fails */
+"This product couldn't be loaded" = "无法加载此产品";
+
 /* Text instructing the user to enter their email address. */
 "To create your new WordPress.com account, please enter your email address." = "要创建新的 WordPress.com 帐户，请输入您的电子邮件地址。";
 
@@ -964,6 +1011,9 @@
 /* Order tracking section title */
 "Tracking" = "跟踪";
 
+/* Add / Edit shipping provider. Title of cell presenting tracking number */
+"Tracking number" = "跟踪编号";
+
 /* Accessibility label for Shipment tracking number in Order details screen. Reads like: Tracking Number 1AZ234567890 */
 "Tracking number %@" = "跟踪编号 %@";
 
@@ -991,14 +1041,23 @@
 /* Content of error presented when Add Note Action Failed. It reads: Unable to add note to order #{order number} */
 "Unable to add note to order #(viewModel.order.orderID)" = "无法为订单号 (viewModel.order.orderID) 添加备注";
 
+/* Content of error presented when Add Shipment Tracking Action Failed. It reads: Unable to add tracking to order #{order number} */
+"Unable to add tracking to order #(orderID)" = "无法为订单 #(orderID) 添加跟踪信息";
+
 /* Content of error presented when updating the status of an Order fails. It reads: Unable to change status of order #{order number} */
 "Unable to change status of order #(orderID)" = "无法更改订单号 (orderID) 的状态";
+
+/* Content of error presented when Delete Shipment Tracking Action Failed. It reads: Unable to delete tracking for order #{order number} */
+"Unable to delete tracking for order #(orderID)" = "无法删除订单 #(orderID) 的跟踪信息";
 
 /* Displayed during the Login flow, whenever the user has no woo stores associated. */
 "Unable to find WooCommerce stores connected to this account" = "找不到与此帐户关联的 WooCommerce 商店";
 
 /* Content of error presented when Fullfill Order Action Failed. It reads: Unable to fulfill order #{order number} */
 "Unable to fulfill order #(orderID)" = "无法履行订单号 (orderID)";
+
+/* Content of error presented when loading the list of shipment providers failed. It reads: Unable to load Shipment Providers */
+"Unable to load Shipment Providers" = "无法加载配送服务提供商";
 
 /* Load Action Failed */
 "Unable to load content" = "无法加载内容";
@@ -1008,6 +1067,9 @@
 
 /* No comment provided by engineer. */
 "Unable to read the WordPress site at that URL. Tap 'Need Help?' to view the FAQ." = "无法通过该 URL 读取 WordPress 站点。轻点“需要帮助？”，以查看常见问题解答。";
+
+/* Notice displayed when an error occurs while refreshing a product. It reads: Unable to refresh product #{product number} */
+"Unable to refresh Product #%ld" = "无法刷新产品 #%ld";
 
 /* Refresh Action Failed */
 "Unable to refresh list" = "无法刷新列表";
