--- a/WooCommerce/Resources/zh-Hant.lproj/Localizable.strings
+++ b/WooCommerce/Resources/zh-Hant.lproj/Localizable.strings
@@ -1,4 +1,4 @@
-/* Translation-Revision-Date: 2019-04-17 09:54:03+0000 */
+/* Translation-Revision-Date: 2019-05-03 07:54:03+0000 */
 /* Plural-Forms: nplurals=1; plural=0; */
 /* Generator: GlotPress/2.4.0-alpha */
 /* Language: zh_TW */
@@ -27,10 +27,12 @@
 /* The plugin is active on the site and has enabled automatic updates */
 "Active, Autoupdates on" = "已啟用，開啟自動更新";
 
-/* Add a note screen - button title to send the note */
+/* Add a note screen - button title to send the note
+   Add tracking screen - button title to add a tracking */
 "Add" = "新增";
 
-/* Add Tracking row label */
+/* Add Tracking row label
+   Add tracking screen - title. */
 "Add Tracking" = "新增追蹤";
 
 /* Button text for adding a new order note */
@@ -41,6 +43,9 @@
 
 /* VoiceOver accessibility hint, informing the user that the button can be used to add an order note. */
 "Adds a note to an order" = "在訂單中新增備註";
+
+/* VoiceOver accessibility hint, informing the user that the button can be used to add tracking to an order. Should end with a period. */
+"Adds tracking to an order." = "新增訂單追蹤。";
 
 /* Cell subtitle explaining why you might want to navigate to view the application log. */
 "Advanced tool to review the app status" = "檢視應用程式狀態的進階工具";
@@ -111,9 +116,6 @@
 
 /* Billing title for customer info cell */
 "Billing details" = "帳單詳細資料";
-
-/* Browse our FAQ title */
-"Browse our FAQ" = "瀏覽常見問題集";
 
 /* Legal disclaimer for signup buttons, the underscores _..._ denote underline */
 "By signing up, you agree to our _Terms of Service_." = "註冊即代表你同意我們的「服務條款」。";
@@ -194,6 +196,9 @@
 /* Cell title: the current date. */
 "Current" = "最新";
 
+/* Title of button to add a custom tracking provider if filtering the list yields no results. */
+"Custom Provider" = "自訂供應商";
+
 /* Customer info section title
    Section title for the customer's billing and shipping address */
 "Customer Information" = "顧客資料";
@@ -202,11 +207,17 @@
    Section title for a note from the customer */
 "Customer Provided Note" = "顧客所提出的備註";
 
+/* Add / Edit shipping provider. Title of cell date shipped */
+"Date shipped" = "出貨日期";
+
 /* Statistical unit - a single day */
 "Day" = "天";
 
 /* Plural of 'day' — a statistical unit */
 "Days" = "天";
+
+/* Delete Tracking button title */
+"Delete Tracking" = "刪除追蹤";
 
 /* The row label to tap for a detailed product list */
 "Details" = "詳細資料";
@@ -218,7 +229,7 @@
 "Discount" = "折扣";
 
 /* Add a note screen - button title for closing the view
-   Dismiss the action sheet */
+   Dismiss the action sheet - Product details screen - button title for closing the view */
 "Dismiss" = "關閉";
 
 /* Label for button to log in using your site address. The underscores _..._ denote underline */
@@ -247,6 +258,15 @@
 
 /* VoiceOver accessibility hint, informing the user that double-tapping will toggle the switch off and on. */
 "Double tap to toggle setting." = "按兩下即可切換設定。";
+
+/* Accessibility hint for Pencil button in an individual Shipment Tracking in the order fulfillment screen */
+"Edit" = "編輯";
+
+/* Edit tracking screen - title. */
+"Edit Tracking" = "編輯追蹤";
+
+/* Accessibility hint for Edit Shipment button in Order fulfillment screen */
+"Edits a shipment." = "編輯貨件。";
 
 /* Email address text field placeholder */
 "Email" = "電子郵件";
@@ -309,7 +329,7 @@
 /* Description for Top Performers section of My Store tab. */
 "Gain insights into how products are performing on your store" = "深入瞭解產品在商店上的成效";
 
-/* Subtitle for Browse our FAQ */
+/* Subtitle for Help Center */
 "Get answers to questions you have" = "取得問題的解答";
 
 /* Alerts the user that wpcom account information is being retrieved. */
@@ -327,6 +347,9 @@
 
 /* Contact Support Action */
 "Help & Support" = "說明與支援";
+
+/* Browse our help documentation website title */
+"Help Center" = "說明中心";
 
 /* My Store > Settings > Privacy settings section */
 "Help Improve The App" = "協助改善應用程式";
@@ -388,6 +411,9 @@
 /* Displayed when an Order is being retrieved */
 "Loading Order" = "正在載入訂單";
 
+/* Displayed when an Product is being retrieved */
+"Loading Product" = "載入產品";
+
 /* Button title.  Tapping takes the user to the login form.
    Log In button label. */
 "Log In" = "登入";
@@ -416,6 +442,9 @@
 
 /* Sign in instructions on the 'log in using email' screen. */
 "Log in with your WordPress.com account email address to manage your WooCommerce stores." = "使用 WordPress.com 帳號電子郵件地址登入，即可管理 WooCommerce 商店。";
+
+/* Error message that displays on the 'Log in by entering your site address.' screen. Jetpack is required for logging into the WooCommerce mobile apps. */
+"Looks like your site isn't set up to use this app. Make sure your site has Jetpack installed to continue." = "你的網站似乎並未準備好使用此應用程式。請確保你的網站已安裝 Jetpack 再繼續操作。";
 
 /* Title of a button. */
 "Lost your password?" = "忘記密碼？";
@@ -510,6 +539,9 @@
 /* Notifications List (Empty State + Filters)
    Orders List (Empty State + Filters) */
 "No results for the selected criteria" = "找不到與指定條件相符的結果";
+
+/* Empty state for the list of shipment providers. It reads: 'No results for DHL. Add a custom provider' */
+"No results found for (term)\nAdd a custom provider" = "No results found for (term)\nAdd a custom provider";
 
 /* Order details > tracking.  This is where the shipping date would normally display. */
 "Not shipped yet" = "尚未運送。";
@@ -649,8 +681,11 @@
 "Private note" = "私人備註";
 
 /* Description for Top Performers left column header
-   Product section title - Section header title for the product */
+   Product section title - Section header title for the product - Title of product detail screen. */
 "Product" = "產品";
+
+/* Notice displayed when the onscreen product was just deleted. It reads: Product {product number} has been removed from your store. */
+"Product %ld has been removed from your store" = "已從你的商店移除產品 %ld";
 
 /* VoiceOver accessibility hint, informing the user that the row can be tapped to get to a prompt that lets them call or message the billing customer. */
 "Prompts with the option to call or message the billing customer." = "提示致電或傳簡訊給帳單客戶的選項。";
@@ -709,6 +744,9 @@
 /* One Time Code has been sent via SMS */
 "SMS Sent" = "簡訊已傳送";
 
+/* Edit tracking screen - button title to save a tracking */
+"Save" = "儲存";
+
 /* Orders Search Placeholder */
 "Search all orders" = "搜尋全部訂單";
 
@@ -747,8 +785,14 @@
 /* Shipping label for payment view */
 "Shipping" = "運送方式";
 
+/* Title of view displaying all available Shipment Tracking Providers */
+"Shipping Providers" = "物流供應商";
+
 /* Shipping title for customer info cell */
 "Shipping details" = "運送詳細資料";
+
+/* Add / Edit shipping provider. Title of cell presenting name */
+"Shipping provider" = "物流供應商";
 
 /* Footer text to show the billing cell */
 "Show billing" = "顯示帳單";
@@ -930,6 +974,9 @@
 /* Settings > Privacy Settings > privacy info section. Explains what we do with the information we collect. */
 "This information helps us improve our products, make marketing to you more relevant, personalize your WordPress.com experience, and more as detailed in our privacy policy." = "這類資訊有助我們改進產品、提供與你更加相關的行銷活動、帶來更為個人化的 WordPress.com 使用體驗；若要瞭解更多詳細內容，請參見我們的「隱私權政策」。";
 
+/* Message displayed when loading a specific product fails */
+"This product couldn't be loaded" = "無法載入此產品";
+
 /* Text instructing the user to enter their email address. */
 "To create your new WordPress.com account, please enter your email address." = "若要建立新的 WordPress.com 帳號，請輸入你的電子郵件地址。";
 
@@ -964,6 +1011,9 @@
 /* Order tracking section title */
 "Tracking" = "追蹤中";
 
+/* Add / Edit shipping provider. Title of cell presenting tracking number */
+"Tracking number" = "追蹤號碼";
+
 /* Accessibility label for Shipment tracking number in Order details screen. Reads like: Tracking Number 1AZ234567890 */
 "Tracking number %@" = "追蹤號碼 %@";
 
@@ -991,14 +1041,23 @@
 /* Content of error presented when Add Note Action Failed. It reads: Unable to add note to order #{order number} */
 "Unable to add note to order #(viewModel.order.orderID)" = "無法新增附註至訂單 #(viewModel.order.orderID)";
 
+/* Content of error presented when Add Shipment Tracking Action Failed. It reads: Unable to add tracking to order #{order number} */
+"Unable to add tracking to order #(orderID)" = "無法新增訂單 #(orderID) 的追蹤";
+
 /* Content of error presented when updating the status of an Order fails. It reads: Unable to change status of order #{order number} */
 "Unable to change status of order #(orderID)" = "無法變更訂單 #(orderID) 的狀態";
+
+/* Content of error presented when Delete Shipment Tracking Action Failed. It reads: Unable to delete tracking for order #{order number} */
+"Unable to delete tracking for order #(orderID)" = "無法刪除訂單 #(orderID) 的追蹤";
 
 /* Displayed during the Login flow, whenever the user has no woo stores associated. */
 "Unable to find WooCommerce stores connected to this account" = "找不到與此帳號連結的 WooCommerce 商店";
 
 /* Content of error presented when Fullfill Order Action Failed. It reads: Unable to fulfill order #{order number} */
 "Unable to fulfill order #(orderID)" = "無法完成訂單 #(orderID)";
+
+/* Content of error presented when loading the list of shipment providers failed. It reads: Unable to load Shipment Providers */
+"Unable to load Shipment Providers" = "無法載入貨件供應者";
 
 /* Load Action Failed */
 "Unable to load content" = "無法載入內容";
@@ -1008,6 +1067,9 @@
 
 /* No comment provided by engineer. */
 "Unable to read the WordPress site at that URL. Tap 'Need Help?' to view the FAQ." = "無法透過該 URL 讀取 WordPress 網站。點選「需要說明？」即可檢視常見問題集。";
+
+/* Notice displayed when an error occurs while refreshing a product. It reads: Unable to refresh product #{product number} */
+"Unable to refresh Product #%ld" = "無法重新整理產品 #%ld";
 
 /* Refresh Action Failed */
 "Unable to refresh list" = "無法重新整理清單";
